RM: latest I18N bundles
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@56310 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_de.properties
+++ b/rm-share/config/alfresco/messages/rm_de.properties
@@ -78,7 +78,7 @@ message.confirm2.destroy=Der Inhalt f\u00fcr die Datei wird dauerhaft gel\u00f6s
 message.confirm2.destroyMultiple=Der Inhalt f\u00fcr die Dateien wird dauerhaft gel\u00f6scht. M\u00f6chten Sie wirklich fortfahren?
 message.confirm.hide.record.title=Datensatz ausblenden
 message.confirm.hide.record=Sie blenden den Datensatz aus. Hierdurch k\u00f6nnen Sie diesen Datensatz nicht mehr innerhalb Ihrer Collaboration-Site anzeigen.
-message.select=Ausw\u00e4hlen...
+message.select=Ausw\u00e4hlen ...
 message.pdf-record-fonts.title=PDF-Datens\u00e4tze: Pr\u00fcfung eingebetteter Schriften
 message.pdf-record-fonts.accession=\u00dcberpr\u00fcfen Sie, ob alle soeben f\u00fcr eine Archivaufnahme verarbeiteten PDF-Datens\u00e4tze die entsprechenden eingebetteten Schriften beinhalten.
 message.pdf-record-fonts.transfer=\u00dcberpr\u00fcfen Sie, ob alle soeben \u00fcbertragenen PDF-Datens\u00e4tze die entsprechenden eingebetteten Schriften beinhalten.
@@ -120,14 +120,14 @@ actions.review-all=Alle \u00fcberpr\u00fcfen
 actions.reviewed=\u00dcberpr\u00fcft
 actions.add-record-metadata=Datensatz-Metadaten hinzuf\u00fcgen
 actions.split-email=E-Mail-Anh\u00e4nge teilen
-actions.transfer=\u00dcbertragen
+actions.transfer=\u00dcbertragung
 actions.transfer-complete=\u00dcbertragung abschlie\u00dfen
 actions.undeclare=Datensatz neu ge\u00f6ffnet
 actions.undo-cutoff=Trennen r\u00fcckg\u00e4ngig machen
 actions.unfreeze=Fixierung aufheben
 actions.unfreeze-all=Alle fixieren
 actions.create-disposition-schedule=Dispositionsplan erstellen
-actions.upload-new-version=Neue Version hochladen
+actions.upload-new-version=Neue Version hoch laden
 actions.view-details=Details anzeigen
 actions.view-audit-log=Audit-Protokoll anzeigen
 actions.create-record=Als Datensatz deklarieren
@@ -135,10 +135,11 @@ actions.hide-record=Datensatz ausblenden
 actions.reject=Ablehnen
 actions.request-info=Informationen anfordern
 actions.file-destruction-report=Bericht \u00fcber vernichtete Datens\u00e4tze generieren
+actions.end-retention=Aufbewahrung beenden
 
 ## File Plan Action Outcomes
 message.multi-select={0} ausgew\u00e4hlte Elemente
-message.accession.failure=''{0}'' konnte nicht ins Archiv aufgenommen werden. 
+message.accession.failure=''{0}'' konnte nicht ins Archiv aufgenommen werden.
 message.accession.success=''{0}'' erfolgreich ins Archiv aufgenommen.
 message.accession-complete.failure=Archivaufnahme von ''{0}'' konnte nicht abgeschlossen werden.
 message.accession-complete.success=Archivaufnahme von ''{0}'' abgeschlossen.
@@ -171,13 +172,13 @@ message.open-folder.failure=Datensatzordner ''{0}'' konnte nicht ge\u00f6ffnet w
 message.open-folder.success=Datensatzordner ''{0}'' wurde ge\u00f6ffnet.
 message.relinquish.failure=Sperre konnte nicht freigegeben werden.
 message.relinquish.success=Sperre freigegeben
-message.review-all.failure=Datens\u00e4tze in Ordner ''{0}'' konnten nicht \u00fcberpr\u00fcft werden. 
+message.review-all.failure=Datens\u00e4tze in Ordner ''{0}'' konnten nicht \u00fcberpr\u00fcft werden.
 message.review-all.success=Datens\u00e4tze in Ordner ''{0}'' wurden \u00fcberpr\u00fcft.
-message.reviewed.failure=''{0}'' konnte nicht \u00fcberpr\u00fcft werden. 
+message.reviewed.failure=''{0}'' konnte nicht \u00fcberpr\u00fcft werden.
 message.reviewed.success=''{0}'' erfolgreich \u00fcberpr\u00fcft.
 message.split-email.failure=Anh\u00e4nge von ''{0}'' konnten nicht getrennt werden.
-message.split-email.success=Anh\u00e4nge von ''{0}'' erfolgreich getrennt. 
-message.transfer.failure=''{0}'' konnte nicht \u00fcbertragen werden. 
+message.split-email.success=Anh\u00e4nge von ''{0}'' erfolgreich getrennt.
+message.transfer.failure=''{0}'' konnte nicht \u00fcbertragen werden.
 message.transfer.success=''{0}'' erfolgreich \u00fcbertragen.
 message.transfer-complete.failure=\u00dcbertragung von ''{0}'' konnte nicht abgeschlossen werden.
 message.transfer-complete.success=\u00dcbertragung von ''{0}'' wurde abgeschlossen.
@@ -201,14 +202,16 @@ message.reject.failure=''{0}'' konnte nicht abgelehnt werden.
 message.reject.success=''{0}'' abgelehnt.
 message.file-destruction-report.failure=Bericht \u00fcber vernichtete Datens\u00e4tze konnte nicht generiert werden.
 message.file-destruction-report.success=Bericht \u00fcber vernichtete Datens\u00e4tze generiert.
+message.end-retention.failure=Aufbewahrung konnte nicht beendet werden
+message.end-retention.success=Aufbewahrung beendet
 
 
 ## File Plan Status Indicators
 status.rm-accession=Archivaufnahme ausstehend
 status.rm-accessioned=Archivaufnahme durchgef\u00fchrt
 status.rm-closed=Geschlossen
-status.rm-cutoff=Getrennt
-status.rm-cutoff-folder=Getrennt
+status.rm-cutoff=Trennen
+status.rm-cutoff-folder=Trennen
 status.rm-destroyed=Vernichtet
 status.rm-frozen=Fixiert
 status.rm-multi-parent=Verkn\u00fcpft in mehreren Datensatzordnern
@@ -219,16 +222,20 @@ status.rm-vital-record=Erforderlicher Datensatz
 status.rm-rejected-record=Abgelehnt
 status.rm-info-requested=Informationen angefordert
 status.rm-disposition-schedule=Datensatzkategorie verf\u00fcgt \u00fcber einen definierten Dispositionsplan.
+status.rm-digital-photograph-record=Digitaler Fotodatensatz
+status.rm-pdf-record=PDF-Datensatz
+status.rm-scanned-record=Eingescannter Datensatz
+status.rm-web-record=Webdatensatz
 # Exif
 status.exif=EXIF-Metadaten verf\u00fcgbar
 
 # RMA model metadata fields
 label.all=Alle
 label.keywords=Stichworte (Text und Name)
-label.identifier=ID
+label.identifier=Identifikator
 label.dateFiled=Ablagedatum
 label.publicationDate=Ver\u00f6ffentlichungsdatum
-label.originator=Ersteller
+label.originator=Urheber
 label.originatingOrganization=Erstellende Organisation
 label.mediaType=Medientyp
 label.format=Format
@@ -315,7 +322,9 @@ menu.select.invert=Auswahl umkehren
 menu.select.folders=Ordner
 menu.select.documents=Dokumente
 menu.select.records=Datens\u00e4tze
-menu.select.undeclared-records=Nicht abgeschlossene Datens\u00e4tze
+menu.select.undeclaredRecords=Nicht abgeschlossene Datens\u00e4tze
+menu.select.recordFolders=Datensatzordner
+menu.select.recordCategories=Datensatzkategorien
 
 ## Metadata Fields
 # Generic
@@ -326,7 +335,7 @@ details.modified.by=Ge\u00e4ndert von
 details.by=Von
 details.size=Gr\u00f6\u00dfe
 details.description=Beschreibung
-details.description.none=(Keine)
+details.description.none=(Kein)
 # Record Category
 details.category.identifier=ID der Datensatzkategorie
 details.category.disposition-authority=Dispositions-Authority
@@ -339,7 +348,7 @@ details.folder.vital-record-indicator=Anzeige f\u00fcr erforderlichen Datensatz
 details.record.identifier=Eindeutige Datensatz-ID
 details.record.date-filed=Ablagedatum
 details.record.publication-date=Ver\u00f6ffentlichungsdatum
-details.record.originator=Ersteller
+details.record.originator=Urheber
 details.record.originating-organization=Erstellende Organisation
 # Incomplete Record
 details.undeclared-record.info=Nicht abgeschlossener Datensatz
@@ -352,28 +361,22 @@ details.hold-container.title.date-format=dd mmmm yyyy 'um' HH:MM:ss
 details.hold-container.reason=Grund f\u00fcr Sperre
 details.hold-container.reason.none=Nicht verf\u00fcgbar
 
-## Pop-up Messages
-# General
-message.loading=Ablageplan wird geladen...
-message.error=Auf Ablageplan konnte nicht zugegriffen werden.
-message.empty=Keine Elemente
-
 ## File Upload (upload new version)
 label.filter-description=Gleicher Typ wie {0}
 
 ## Empty List
-no.items.title=Keine Elemente
+no.items.title=Keine Dateien
 
 ## Tips
 tip.insitu-rename=Umbenennen
 tip.insitu-tag=Tag
 
 ## Help panels, including Drag and Drop
-show.folders={0} Unterordner anzeigen=======
+show.folders={0} Unterordner anzeigen
 
 details.undeclared-record.info=Nicht abgeschlossener Datensatz
 details.record.identifier=Eindeutige Datensatz-ID
-details.record.originator=Ersteller
+details.record.originator=Urheber
 details.record.originating-organization=Erstellende Organisation
 
 ## Create site dialog
@@ -387,6 +390,7 @@ link.managementConsole=Verwaltungskonsole
 ## Rules
 customise.reject.text=Datens\u00e4tze mit Kommentar ''{param.reason}'' ablehnen
 customise.requestInfo.text=Erstellt eine Workflow-Aufgabe f\u00fcr eine Liste festgelegter Benutzer und fordert die folgenden Informationen ''{param.requestedInfo}'' an.
+customise.sendEmail.text=E-Mail mit dem Betreff ''{param.subject}'' an ausgew\u00e4hlte Empf\u00e4nger versenden
 
 ## Records Management Console
 header.rm-console.label=Records Management...
@@ -402,3 +406,9 @@ rm.wf.selected-users-and-groups=Benutzer und Gruppen
 rm.wf.give-details=Informationen bereitstellen
 rm.wf.message=Nachricht
 rm.wf.details=Details
+
+## Text length validation
+message.max.text.length.validation=Der Text darf nicht l\u00e4nger als {max} Zeichen sein
+
+## Validation messages
+Alfresco.forms.validation.rmVitalRecordPeriodMandatory.message=Bitte w\u00e4hlen Sie einen \u00dcberpr\u00fcfungszeitraum
