--- a/rm-share/config/alfresco/messages/rm_fr.properties
+++ b/rm-share/config/alfresco/messages/rm_fr.properties
@@ -1,4 +1,4 @@
-## Records Management Messages
+ï»¿## Records Management Messages
 
 ## Page titles
 page.rmDocumentLibrary.title=Plan de fichier
@@ -23,7 +23,7 @@ page.rmRecordSeriesDetails.title=D\u00e9tails de s\u00e9rie d'enregistrements
 page.rmRecordSeriesDetails.description=Page de d\u00e9tails de s\u00e9rie d'enregistrement de la gestion des enregistrements
 page.rmRecordCategoryDetails.title=D\u00e9tails de cat\u00e9gorie d'enregistrement
 page.rmRecordCategoryDetails.description=Page de d\u00e9tails de cat\u00e9gorie d'enregistrement de la gestion des enregistrements
-page.rmRecordFolderDetails.title=D\u00e9tails de dossier d'enregistrements
+page.rmRecordFolderDetails.title=D\u00e9tails du dossier d'enregistrements
 page.rmRecordFolderDetails.description=Page de d\u00e9tails de dossier d'enregistrements de la gestion des enregistrements
 
 ## Forms
@@ -39,11 +39,11 @@ label.set.customMetadata=Propri\u00e9t\u00e9s personnalis\u00e9es
 label.recordLevelDisposition=Appliqu\u00e9 \u00e0
 label.record=Enregistrement
 label.folder=Dossier d'enregistrements
-label.declared=Complet
+label.declared=Termin\u00e9
 label.recordType=Type d'enregistrement
-label.seriesIdentifier=Identificateur de s\u00e9rie d'enregistrement
+label.seriesIdentifier=Identificateur de s\u00e9rie d'enregistrements
 label.categoryIdentifier=Identificateur de cat\u00e9gorie d'enregistrement
-label.folderIdentifier=Identificateur de dossier d'enregistrement
+label.folderIdentifier=Identificateur de dossier d'enregistrements
 label.recordIdentifier=Identificateur d'enregistrement
 label.dispositionInstructions=Instructions de disposition
 label.dispositionAsOfDate=Date de d\u00e9but de disposition
@@ -67,19 +67,19 @@ button.freeze.record=Geler l'enregistrement
 button.reject.record=Rejeter l'enregistrement
 button.request-info=Demander des informations
 
-## Pop-up Messages
+##\ufffdPop-up Messages
 message.confirm.delete.title=Confirmation de la suppression
-message.confirm.delete=Voulez-vous vraiment supprimer ''{0}'' ?
+message.confirm.delete=\u00cates-vous s\u00fbr de vouloir supprimer ''{0}'' ?
 message.confirm.destroy.title=Confirmation de la destruction
 message.confirm.destroy=Voulez-vous vraiment d\u00e9truire ''{0}'' ?
 message.confirm.destroyMultiple=Voulez-vous vraiment d\u00e9truire les {0} fichiers s\u00e9lectionn\u00e9s ?
 message.confirm2.destroy.title=Confirmation de la destruction
-message.confirm2.destroy=Le contenu du fichier sera supprim\u00e9 d\u00e9fintivement. Voulez-vous continuer ?
-message.confirm2.destroyMultiple=Le contenu des fichiers sera supprim\u00e9 d\u00e9fintivement. Voulez-vous continuer ?
+message.confirm2.destroy=Le contenu du fichier sera supprim\u00e9 d\u00e9finitivement. Voulez-vous continuer ?
+message.confirm2.destroyMultiple=Le contenu des fichiers sera supprim\u00e9 d\u00e9finitivement. Voulez-vous continuer ?
 message.confirm.hide.record.title=Masquer l'enregistrement
 message.confirm.hide.record=Vous masquez l'enregistrement et il ne figurera plus dans votre site de collaboration.
 message.select=S\u00e9lectionner...
-message.pdf-record-fonts.title=Enregistrements PDF : V\u00e9rification des polices int\u00e9gr\u00e9es
+message.pdf-record-fonts.title=Enregistrements PDF\u00a0: v\u00e9rification de la police int\u00e9gr\u00e9e
 message.pdf-record-fonts.accession=V\u00e9rifie que les enregistrements PDF qui viennent de faire l'objet d'une action contiennent les polices int\u00e9gr\u00e9es applicables.
 message.pdf-record-fonts.transfer=V\u00e9rifie que les enregistrements PDF qui viennent d'\u00eatre transf\u00e9r\u00e9s contiennent les polices int\u00e9gr\u00e9es applicables.
 message.pdf-record-fonts.unknown=Si le transfert ou l'acc\u00e8s comprend des enregistrements PDF, v\u00e9rifiez que les polices int\u00e9gr\u00e9es applicables ont \u00e9t\u00e9 incluses.
@@ -97,7 +97,7 @@ actions.more=Plus...
 actions.accession=Acc\u00e8s
 actions.close-folder=Fermer le dossier
 actions.copy-to=Copier vers...
-actions.cutoff=Limite
+actions.cutoff=Limiter
 actions.declare=Compl\u00e9ter un enregistrement
 actions.delete=Supprimer
 actions.destroy=D\u00e9truire
@@ -113,7 +113,7 @@ actions.link-to=Lier \u00e0...
 actions.file-to=Archiver dans...
 actions.freeze=Geler
 actions.manage-permissions=G\u00e9rer les autorisations
-actions.move-to=Transf\u00e9rer vers...
+actions.move-to=D\u00e9placer vers...
 actions.open-folder=Rouvrir le dossier
 actions.relinquish=Lever la suspension
 actions.review-all=V\u00e9rifier tout
@@ -135,18 +135,19 @@ actions.hide-record=Masquer l'enregistrement
 actions.reject=Rejeter
 actions.request-info=Demander des informations
 actions.file-destruction-report=G\u00e9n\u00e9rer un rapport de destruction
+actions.end-retention=Mettre fin \u00e0 la r\u00e9tention
 
 ## File Plan Action Outcomes
 message.multi-select={0} \u00e9l\u00e9ments s\u00e9lectionn\u00e9s
-message.accession.failure=Impossible d'acc\u00e9der \u00e0 ''{0}'' 
-message.accession.success=L'acc\u00e8s \u00e0 ''{0}'' a abouti
-message.accession-complete.failure=Impossible d'acc\u00e9der \u00e0 ''{0}''
-message.accession-complete.success=Acc\u00e8s ''{0}'' termin\u00e9
+message.accession.failure=Impossible d''acc\u00e9der \u00e0 ''{0}''
+message.accession.success=L''acc\u00e8s \u00e0 ''{0}'' a abouti
+message.accession-complete.failure=Impossible d''acc\u00e9der \u00e0 ''{0}''
+message.accession-complete.success=Acc\u00e8s \u00e0 ''{0}'' termin\u00e9
 message.close.failure=Impossible de fermer ''{0}''
 message.close.success=''{0}'' a \u00e9t\u00e9 ferm\u00e9 avec succ\u00e8s
 message.cutoff.failure=Impossible de limiter ''{0}''
 message.cutoff.success=''{0}'' a \u00e9t\u00e9 limit\u00e9 avec succ\u00e8s
-message.declare.failure=Impossible de compl\u00e9ter l'enregistrement ''{0}''
+message.declare.failure=Impossible de compl\u00e9ter l''enregistrement ''{0}''
 message.declare.failure.more=L'enregistrement dispose de m\u00e9tadonn\u00e9es qui doivent \u00eatre compl\u00e9t\u00e9es.
 message.declare.success=''{0}'' a \u00e9t\u00e9 compl\u00e9t\u00e9
 message.delete.failure=Impossible de supprimer ''{0}''
@@ -167,23 +168,23 @@ message.freeze.reason=Motif :
 message.freeze.title=Motif du gel
 message.freeze.failure=Impossible de geler ''{0}''
 message.freeze.success=''{0}'' est d\u00e9sormais gel\u00e9
-message.open-folder.failure=Impossible d'ouvrir le dossier d'enregistrement ''{0}''
+message.open-folder.failure=Impossible d''ouvrir le dossier d''enregistrement ''{0}''
 message.open-folder.success=Le dossier d'enregistrement ''{0}'' \u00e9tait ouvert
 message.relinquish.failure=Impossible de lever la suspension
 message.relinquish.success=Suspension lev\u00e9e
-message.review-all.failure=Impossible de v\u00e9rifier les enregistrements dans le dossier ''{0}'' 
+message.review-all.failure=Impossible de v\u00e9rifier les enregistrements dans le dossier ''{0}''
 message.review-all.success=Les enregistrements dans le dossier ''{0}'' ont \u00e9t\u00e9 v\u00e9rifi\u00e9s
-message.reviewed.failure=Impossible de v\u00e9rifier ''{0}'' 
+message.reviewed.failure=Impossible de v\u00e9rifier ''{0}''
 message.reviewed.success=''{0}'' a \u00e9t\u00e9 v\u00e9rifi\u00e9 avec succ\u00e8s
 message.split-email.failure=Impossible de s\u00e9parer les pi\u00e8ces jointes de ''{0}''
-message.split-email.success=Les pi\u00e8ces jointes ont \u00e9t\u00e9 s\u00e9par\u00e9es avec succ\u00e8s de ''{0}'' 
-message.transfer.failure=Impossible de transf\u00e9rer ''{0}'' 
+message.split-email.success=Les pi\u00e8ces jointes ont \u00e9t\u00e9 s\u00e9par\u00e9es avec succ\u00e8s de ''{0}''
+message.transfer.failure=Impossible de transf\u00e9rer ''{0}''
 message.transfer.success=''{0}'' a \u00e9t\u00e9 transf\u00e9r\u00e9 avec succ\u00e8s
 message.transfer-complete.failure=Impossible de transf\u00e9rer ''{0}''
-message.transfer-complete.success=''{0}'' a \u00e9t\u00e9 transf\u00e9r\u00e9 avec succ\u00e8s
+message.transfer-complete.success=Le transfert de ''{0}'' est termin\u00e9
 message.undeclare.failure=Impossible de rouvrir ''{0}''
-message.undeclare.success=''{0}'' n'est plus un enregistrement complet
-message.undo-cutoff.failure=Impossible d'annuler la limite de ''{0}''
+message.undeclare.success=''{0}'' n''est plus un enregistrement complet
+message.undo-cutoff.failure=Impossible d''annuler la limite de ''{0}''
 message.undo-cutoff.success=Annuler la limite le ''{0}''
 message.unfreeze.failure=Impossible de d\u00e9geler ''{0}''
 message.unfreeze.success=''{0}'' a \u00e9t\u00e9 d\u00e9gel\u00e9 avec succ\u00e8s
@@ -201,14 +202,16 @@ message.reject.failure=Impossible de rejeter ''{0}''
 message.reject.success=''{0}''rejet\u00e9
 message.file-destruction-report.failure=Impossible de g\u00e9n\u00e9rer le rapport de destruction
 message.file-destruction-report.success=Rapport de destruction g\u00e9n\u00e9r\u00e9
+message.end-retention.failure=Impossible de mettre fin \u00e0 la r\u00e9tention
+message.end-retention.success=R\u00e9tention finie
 
 
 ## File Plan Status Indicators
 status.rm-accession=Acc\u00e8s en attente
 status.rm-accessioned=Accessible
 status.rm-closed=Ferm\u00e9
-status.rm-cutoff=Limite
-status.rm-cutoff-folder=Limite
+status.rm-cutoff=Limiter
+status.rm-cutoff-folder=Limiter
 status.rm-destroyed=D\u00e9truit
 status.rm-frozen=Gel\u00e9
 status.rm-multi-parent=Li\u00e9 dans plusieurs dossiers d'enregistrements
@@ -219,6 +222,10 @@ status.rm-vital-record=Enregistrement essentiel
 status.rm-rejected-record=Rejet\u00e9
 status.rm-info-requested=Informations demand\u00e9es
 status.rm-disposition-schedule=La cat\u00e9gorie d'enregistrement a une planification de disposition d\u00e9finie
+status.rm-digital-photograph-record=Enregistrement de photographie num\u00e9rique
+status.rm-pdf-record=Enregistrement Pdf
+status.rm-scanned-record=Enregistrement num\u00e9ris\u00e9
+status.rm-web-record=Enregistrement Web
 # Exif
 status.exif=M\u00e9tadonn\u00e9es EXIF disponibles
 
@@ -303,19 +310,21 @@ tool.rm-users-and-groups.description=Utilisateurs et groupes
 button.sort.ascending=Tri croissant
 button.sort.descending=Tri d\u00e9croissant
 button.folders.show=Afficher les dossiers
-button.folders.hide=Masquer les dossiers
-button.view.simple=Vue simple
+button.folders.hide=Cacher les dossiers
+button.view.simple=Vue simplifi\u00e9e
 button.view.detailed=Vue d\u00e9taill\u00e9e
 
 ## Drop-down Menus
 menu.select=S\u00e9lectionner
 menu.select.all=Tout
-menu.select.none=N\u00e9ant
+menu.select.none=Aucun
 menu.select.invert=Inverser la s\u00e9lection
 menu.select.folders=Dossiers
 menu.select.documents=Documents
 menu.select.records=Enregistrements
-menu.select.undeclared-records=Enregistrements incomplets
+menu.select.undeclaredRecords=Enregistrements incomplets
+menu.select.recordFolders=Dossiers d'enregistrements
+menu.select.recordCategories=Cat\u00e9gories d'enregistrement
 
 ## Metadata Fields
 # Generic
@@ -326,15 +335,15 @@ details.modified.by=Modifi\u00e9 par
 details.by=Par
 details.size=Taille
 details.description=Description
-details.description.none=(N\u00e9ant)
+details.description.none=(Aucun)
 # Record Category
 details.category.identifier=Identificateur de cat\u00e9gorie d'enregistrement
 details.category.disposition-authority=Droit de disposition
 details.category.disposition-instructions=Instructions de disposition
-details.category.vital-record-indicator=Indicateur d'enregistrement essentiel
+details.category.vital-record-indicator=Identificateur d'enregistrement essentiel
 # Record Folder
 details.folder.identifier=Identificateur de dossier d'enregistrements
-details.folder.vital-record-indicator=Indicateur d'enregistrement essentiel
+details.folder.vital-record-indicator=Identificateur d'enregistrement essentiel
 # Record
 details.record.identifier=Identificateur d'enregistrement unique
 details.record.date-filed=Date d'archivage
@@ -348,15 +357,9 @@ details.transfer-container.title=Transf\u00e9rer {0}
 details.transfer-container.is-accession=<em>Remarque :</em> le type de transfert est Acc\u00e8s
 # Hold Container
 details.hold-container.title=Suspension cr\u00e9\u00e9e le {0}
-details.hold-container.title.date-format=jj mmmm aaaa '\u00e0' HH:MM:ss
+details.hold-container.title.date-format=dd mmmm yyyy '\u00e0' HH:MM:ss
 details.hold-container.reason=Motif de la suspension
-details.hold-container.reason.none=Indisponible
-
-## Pop-up Messages
-# General
-message.loading=Chargement du plan de fichier...
-message.error=Impossible d'acc\u00e9der au plan de fichier
-message.empty=Aucun \u00e9l\u00e9ment
+details.hold-container.reason.none=Non disponible
 
 ## File Upload (upload new version)
 label.filter-description=Type identique \u00e0 {0}
@@ -369,7 +372,7 @@ tip.insitu-rename=Renommer
 tip.insitu-tag=Balise
 
 ## Help panels, including Drag and Drop
-show.folders=Afficher {0} sous-dossier(s)=======
+show.folders=Afficher {0} sous-dossier(s)
 
 details.undeclared-record.info=Enregistrement incomplet
 details.record.identifier=Identificateur d'enregistrement unique
@@ -387,6 +390,7 @@ link.managementConsole=Console de gestion
 ## Rules
 customise.reject.text=Rejeter les enregistrements avec le commentaire ''{param.reason}''
 customise.requestInfo.text=Cr\u00e9e une t\u00e2che de workflow pour une liste de personnes d\u00e9finies et demande les informations suivantes ''{param.requestedInfo}''
+customise.sendEmail.text=Envoyer un e-mail avec l''objet ''{param.subject}'' \u00e0 des destinataires sp\u00e9cifi\u00e9s
 
 ## Records Management Console
 header.rm-console.label=Gestion des enregistrements...
@@ -402,3 +406,9 @@ rm.wf.selected-users-and-groups=Utilisateurs et groupes
 rm.wf.give-details=Fournir des informations
 rm.wf.message=Message
 rm.wf.details=D\u00e9tails
+
+## Text length validation
+message.max.text.length.validation=Le texte ne doit pas d\u00e9passer {max} caract\u00e8res
+
+## Validation messages
+Alfresco.forms.validation.rmVitalRecordPeriodMandatory.message=Veuillez s\u00e9lectionner une p\u00e9riode de v\u00e9rification
