--- a/rm-share/config/alfresco/messages/rm_it.properties
+++ b/rm-share/config/alfresco/messages/rm_it.properties
@@ -1,4 +1,4 @@
-## Records Management Messages
+ï»¿## Records Management Messages
 
 ## Page titles
 page.rmDocumentLibrary.title=Piano file
@@ -67,7 +67,7 @@ button.freeze.record=Blocca record
 button.reject.record=Respingi record
 button.request-info=Richiedi informazioni
 
-## Pop-up Messages
+##\ufffdPop-up Messages
 message.confirm.delete.title=Conferma di eliminazione
 message.confirm.delete=Eliminare ''{0}''?
 message.confirm.destroy.title=Conferma di eliminazione permanente
@@ -79,7 +79,7 @@ message.confirm2.destroyMultiple=Il contenuto dei file sar\u00e0 eliminato in ma
 message.confirm.hide.record.title=Nascondi record
 message.confirm.hide.record=Si sta nascondendo il record e non sar\u00e0 pi\u00f9 possibile visualizzarlo all'interno del sito di collaborazione.
 message.select=Seleziona...
-message.pdf-record-fonts.title=Record PDF: Controllo caratteri incorporati
+message.pdf-record-fonts.title=Record PDF: controllo dei caratteri incorporati
 message.pdf-record-fonts.accession=Controllare che tutti i record PDF appena inseriti includano i caratteri incorporati applicabili.
 message.pdf-record-fonts.transfer=Controllare che tutti i record PDF appena trasferiti includano i caratteri incorporati applicabili.
 message.pdf-record-fonts.unknown=Se il trasferimento o l'inserimento ha interessato record PDF, \u00e8 necessario controllare che siano stati inclusi i caratteri incorporati applicabili.
@@ -93,7 +93,7 @@ message.admin-console-access-denied=\u00c8 necessario disporre di permessi aggiu
 path.fileplan=Piano file
 
 ## File Plan Actions
-actions.more=Altro...
+actions.more=Segue...
 actions.accession=Inserimento
 actions.close-folder=Chiudi cartella
 actions.copy-to=Copia in...
@@ -135,12 +135,13 @@ actions.hide-record=Nascondi record
 actions.reject=Respingi
 actions.request-info=Richiedi informazioni
 actions.file-destruction-report=Genera report di eliminazione permanente
+actions.end-retention=Termina conservazione
 
 ## File Plan Action Outcomes
 message.multi-select={0} elementi selezionati
-message.accession.failure=Impossibile inserire ''{0}'' 
+message.accession.failure=Impossibile inserire ''{0}''
 message.accession.success=''{0}'' inserito
-message.accession-complete.failure=Impossibile completare l'inserimento di ''{0}''
+message.accession-complete.failure=Impossibile completare l''inserimento di ''{0}''
 message.accession-complete.success=Inserimento ''{0}'' completato
 message.close.failure=Impossibile chiudere ''{0}''
 message.close.success=Chiusura di ''{0}'' riuscita
@@ -171,13 +172,13 @@ message.open-folder.failure=Impossibile aprire la cartella di record ''{0}''
 message.open-folder.success=La cartella di record ''{0}'' \u00e8 stata aperta
 message.relinquish.failure=Impossibile rilasciare l'esenzione
 message.relinquish.success=Esenzione rilasciata
-message.review-all.failure=Impossibile rivedere i record della cartella ''{0}'' 
+message.review-all.failure=Impossibile rivedere i record della cartella ''{0}''
 message.review-all.success=I record della cartella ''{0}'' sono stati rivisti
-message.reviewed.failure=Impossibile rivedere ''{0}'' 
+message.reviewed.failure=Impossibile rivedere ''{0}''
 message.reviewed.success=Revisione di ''{0}'' riuscita
 message.split-email.failure=Impossibile separare gli allegati da ''{0}''
-message.split-email.success=Separazione degli allegati da ''{0}'' riuscita 
-message.transfer.failure=Impossibile trasferire ''{0}'' 
+message.split-email.success=Separazione degli allegati da ''{0}'' riuscita
+message.transfer.failure=Impossibile trasferire ''{0}''
 message.transfer.success=Trasferimento di ''{0}'' riuscito
 message.transfer-complete.failure=Impossibile completare il trasferimento ''{0}''
 message.transfer-complete.success=Il trasferimento ''{0}'' \u00e8 stato completato
@@ -201,14 +202,16 @@ message.reject.failure=Impossibile respingere ''{0}''
 message.reject.success=''{0}'' respinto
 message.file-destruction-report.failure=Impossibile generare il report di eliminazione permanente
 message.file-destruction-report.success=Report di eliminazione permanente generato
+message.end-retention.failure=Impossibile terminare conservazione
+message.end-retention.success=Conservazione terminata
 
 
 ## File Plan Status Indicators
 status.rm-accession=Inserimento in sospeso
 status.rm-accessioned=Inserito
 status.rm-closed=Chiuso
-status.rm-cutoff=Tagliato
-status.rm-cutoff-folder=Tagliato
+status.rm-cutoff=Taglia
+status.rm-cutoff-folder=Taglia
 status.rm-destroyed=Eliminato definitivamente
 status.rm-frozen=Bloccato
 status.rm-multi-parent=Collegato in cartelle di record multiple
@@ -219,13 +222,17 @@ status.rm-vital-record=Record essenziale
 status.rm-rejected-record=Respinto
 status.rm-info-requested=Informazioni richieste
 status.rm-disposition-schedule=La categoria record ha una pianificazione di disposizione definita
+status.rm-digital-photograph-record=Record fotografia digitale
+status.rm-pdf-record=Record PDF
+status.rm-scanned-record=Record scansionato
+status.rm-web-record=Record Web
 # Exif
 status.exif=Metadati EXIF disponibili
 
 # RMA model metadata fields
-label.all=Tutti
+label.all=Tutte
 label.keywords=Parole chiave (testo e nome)
-label.identifier=Identificatore
+label.identifier=Identificativo
 label.dateFiled=Data di archiviazione
 label.publicationDate=Data di pubblicazione
 label.originator=Iniziatore
@@ -282,8 +289,8 @@ label.dod.contentManagementSystem=Sistema di gestione dei contenuti
 # Admin Console tools
 tool.rm-define-roles.label=Definisci ruoli
 tool.rm-define-roles.description=Crea e modifica ruoli
-tool.rm-custom-metadata.label=Personalizza metadati
-tool.rm-custom-metadata.description=Personalizza metadati
+tool.rm-custom-metadata.label=Metadati personalizzati
+tool.rm-custom-metadata.description=Metadati personalizzati
 tool.rm-list-of-values.label=Elenco di valori
 tool.rm-list-of-values.description=Definizioni elenco di valori
 tool.rm-references.label=Relazioni
@@ -310,18 +317,20 @@ button.view.detailed=Vista dettagliata
 ## Drop-down Menus
 menu.select=Seleziona
 menu.select.all=Tutte
-menu.select.none=Nessuna
+menu.select.none=Nessuno
 menu.select.invert=Inverti selezione
 menu.select.folders=Cartelle
 menu.select.documents=Documenti
 menu.select.records=Record
-menu.select.undeclared-records=Record incompleti
+menu.select.undeclaredRecords=Record incompleti
+menu.select.recordFolders=Cartelle record
+menu.select.recordCategories=Categorie record
 
 ## Metadata Fields
 # Generic
-details.created.on=Creato il
+details.created.on=Creato
 details.created.by=Creato da
-details.modified.on=Modificato il
+details.modified.on=Modificato:
 details.modified.by=Modificato da
 details.by=Da
 details.size=Dimensioni
@@ -352,12 +361,6 @@ details.hold-container.title.date-format=gg mmmm aaaa 'alle' HH:MM:ss
 details.hold-container.reason=Motivo dell'esenzione
 details.hold-container.reason.none=Non disponibile
 
-## Pop-up Messages
-# General
-message.loading=Caricamento del piano file...
-message.error=Impossibile accedere al piano file
-message.empty=Nessun elemento
-
 ## File Upload (upload new version)
 label.filter-description=Stesso tipo di {0}
 
@@ -369,7 +372,7 @@ tip.insitu-rename=Rinomina
 tip.insitu-tag=Tag
 
 ## Help panels, including Drag and Drop
-show.folders=Mostra {0} sottocartelle=======
+show.folders=Mostra {0} sottocartelle
 
 details.undeclared-record.info=Record incompleto
 details.record.identifier=Identificatore record unico
@@ -387,6 +390,7 @@ link.managementConsole=Console di gestione
 ## Rules
 customise.reject.text=Respingi record con commento ''{param.reason}''
 customise.requestInfo.text=Crea un''attivit\u00e0 di workflow per un elenco di persone specificate e richiede le seguenti informazioni ''{param.requestedInfo}''
+customise.sendEmail.text=Invia e-mail con oggetto ''{param.subject}'' ai destinatari specificati
 
 ## Records Management Console
 header.rm-console.label=Gestione dei record...
@@ -402,3 +406,9 @@ rm.wf.selected-users-and-groups=Utenti e gruppi
 rm.wf.give-details=Fornisci informazioni
 rm.wf.message=Messaggio
 rm.wf.details=Dettagli
+
+## Text length validation
+message.max.text.length.validation=La lunghezza del testo non pu\u00f2 superare {max} caratteri
+
+## Validation messages
+Alfresco.forms.validation.rmVitalRecordPeriodMandatory.message=Selezionare un periodo di revisione
