--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_es.properties
@@ -6,7 +6,7 @@ label.to=Hasta
 label.yes=S\u00ed
 label.no=No
 label.button-cancel=Cancelar
-button.view-record=Ver registro
+button.view-record=Ver documento de archivo
 
 label.clear-log-title=\u00bfBorrar registro de auditor\u00edas?
 label.clear-log-confirmation=\u00bfEst\u00e1 seguro de que desea borrar el registro de auditor\u00edas?
@@ -34,11 +34,11 @@ label.button-start=Iniciar
 label.button-view-log=Ver registro completo
 label.button-specify=Especificar
 label.button-export=Exportar
-label.button-file-record=Archivar como registro
+label.button-file-record=Archivar como documento de archivo
 
-label.filed-log-message=El registro de auditor\u00edas se ha archivado como registro.
-message.file-log-fail=Error al archivar auditor\u00eda como registro.
-label.file-record=Archivar registro
+label.filed-log-message=El registro de auditor\u00edas se ha archivado como documento de archivo.
+message.file-log-fail=Error al archivar auditor\u00eda como documento de archivo.
+label.file-record=Archivar documento de archivo
 
 
 label.timestamp=Marca de tiempo
@@ -54,4 +54,4 @@ label.identifier=Identificador
 label.no-previous=<ninguno>
 
 node.root=Plan de ficheros
-title.single=Seleccionar ubicaci\u00f3n del registro de auditor\u00edas
+title.single=Seleccionar ubicaci\u00f3n del documento de archivo de auditor\u00edas
