--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_de.properties
@@ -30,10 +30,10 @@ message.select-to-date=Enddatum ausw\u00e4hlen
 
 label.button-clear=L\u00f6schen
 label.button-stop=Stoppen
-label.button-start=Starten
+label.button-start=Start
 label.button-view-log=Vollst\u00e4ndiges Protokoll anzeigen
 label.button-specify=Festlegen
-label.button-export=Exportieren
+label.button-export=Export
 label.button-file-record=Als Datensatz ablegen
 label.button-apply=Anwenden
 label.button-details=Details
@@ -61,7 +61,7 @@ title.single=Ort f\u00fcr Audit-Datensatz ausw\u00e4hlen
 label.header-users=Benutzer
 label.header-entries=Anzahl Eintr\u00e4ge
 label.header-from=Von
-label.header-to=Bis
+label.header-to=Zu
 label.header-event=Ereignis
 label.header-property=Eigenschaft
 
@@ -69,3 +69,5 @@ label.dialog-title=Details von Ereignis {0}
 label.property=Eigenschaft
 label.previous-value=Vorheriger Wert
 label.new-value=Neuer Wert
+
+message.load-peopleFinder-failure=Komponente 'Mitarbeiter-Finder' konnte nicht geladen werden.
