--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_es.properties
@@ -1,10 +1,10 @@
-label.header-title=Auditor\u00eda
+﻿label.header-title=Auditor\u00eda
 
 label.yes=S\u00ed
 label.no=No
-label.record=Registro
+label.record=Documento de archivo
 label.button-cancel=Cancelar
-button.view-record=Ver registro
+button.view-record=Ver documento de archivo
 
 label.clear-log-title=\u00bfBorrar registro de auditor\u00edas?
 label.clear-log-confirmation=\u00bfEst\u00e1 seguro de que desea borrar el registro de auditor\u00edas?
@@ -34,13 +34,13 @@ label.button-start=Iniciar
 label.button-view-log=Ver registro completo
 label.button-specify=Especificar
 label.button-export=Exportar
-label.button-file-record=Archivar como registro
+label.button-file-record=Archivar como documento de archivo
 label.button-apply=Aplicar
 label.button-details=Detalles
 
-label.filed-log-message=El registro de auditor\u00edas se ha archivado como registro.
-message.filing-log-fail=Error al archivar auditor\u00eda como registro.
-label.file-record=Archivar registro
+label.filed-log-message=El registro de auditor\u00edas se ha archivado como documento de archivo.
+message.filing-log-fail=Error al archivar auditor\u00eda como documento de archivo.
+label.file-record=Archivar documento de archivo
 
 label.timestamp=Marca de tiempo
 label.user=Usuario
@@ -53,15 +53,15 @@ label.pagination=Mostrando las \u00faltimas {0} entradas del registro
 label.show-log-for=Mostrar registro para:
 label.all-users=Todos los usuarios
 label.remove-filter=Eliminar filtro
-label.default-message=Haga clic en 'Aplicar' para ver el registro de auditor\u00edas
+label.default-message=Haga clic en ''Aplicar'' para ver el registro de auditor\u00edas
 
 node.root=Plan de ficheros
-title.single=Seleccionar ubicaci\u00f3n del registro de auditor\u00edas
+title.single=Seleccionar ubicaci\u00f3n del documento de archivo de auditor\u00edas
 
 label.header-users=Usuarios
 label.header-entries=N\u00famero de entradas
 label.header-from=Desde
-label.header-to=Hasta
+label.header-to=Para
 label.header-event=Evento
 label.header-property=Propiedad
 
@@ -69,3 +69,5 @@ label.dialog-title=Detalles de evento {0}
 label.property=Propiedad
 label.previous-value=Valor anterior
 label.new-value=Nuevo valor
+
+message.load-peopleFinder-failure=No se pudo cargar el componente ''Buscador de personas''
