--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_fr.properties
@@ -1,4 +1,4 @@
-label.header-title=Audit
+﻿label.header-title=Audit
 
 label.yes=Oui
 label.no=Non
@@ -69,3 +69,5 @@ label.dialog-title=D\u00e9tails de l''\u00e9v\u00e9nement {0}
 label.property=Propri\u00e9t\u00e9
 label.previous-value=Valeur pr\u00e9c\u00e9dente
 label.new-value=Nouvelle valeur
+
+message.load-peopleFinder-failure=Impossible de charger le composant \u00ab\u00a0Utilitaire de recherche de personnes\u00a0\u00bb
