--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_it.properties
@@ -1,4 +1,4 @@
-label.header-title=Controllo
+﻿label.header-title=Controllo
 
 label.yes=S\u00ec
 label.no=No
@@ -69,3 +69,5 @@ label.dialog-title=Dettagli di {0} evento
 label.property=Propriet\u00e0
 label.previous-value=Valore precedente
 label.new-value=Nuovo valore
+
+message.load-peopleFinder-failure=Impossibile caricare il componente 'Ricerca persona'
