--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_de.properties
@@ -1,5 +1,5 @@
 label.view-listofvalues-title=Listen
-label.edit-listofvalue-title=Liste bearbeiten: {0}
+label.edit-listofvalue-title=Liste ''{0}'' bearbeiten
 label.values=Werte
 label.access=Zugriff
 
@@ -22,7 +22,9 @@ message.empty.access=Klicken Sie auf 'Hinzuf\u00fcgen', um einer Gruppe oder ein
 message.error=Daten konnten nicht geladen werden.
 message.addvalue.failure=Wert ''{0}'' konnte nicht hinzugef\u00fcgt werden.
 message.addlist.failure.title=Liste konnte nicht hinzugef\u00fcgt werden.
-message.addlist.failure.text=Liste konnte nicht hinzugef\u00fcgt werden: {0}
+message.addlist.failure.text=Liste ''{0}'' konnte nicht hinzugef\u00fcgt werden
+message.renamelist.failure.title=Liste konnte nicht umbenannt werden
+message.renamelist.failure.text=Liste ''{0}'' konnte nicht umbenannt werden
 message.confirm.removevalue.title=Wert entfernen
 message.confirm.removevalue.text=M\u00f6chten Sie ''{0}'' wirklich entfernen?
 message.deletevalue.failure=Wert konnte nicht gel\u00f6scht werden.
