--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_fr.properties
@@ -1,5 +1,5 @@
-label.view-listofvalues-title=Listes
-label.edit-listofvalue-title=Modifier la liste : {0}
+﻿label.view-listofvalues-title=Listes
+label.edit-listofvalue-title=Modifier les listes\u00a0: {0}
 label.values=Valeurs
 label.access=Acc\u00e8s
 
@@ -10,7 +10,7 @@ panel.addaccess.header=Ajouter un acc\u00e8s
 button.newlist=Nouvelle liste
 
 message.confirm.deletelist.title=Supprimer la liste
-message.confirm.deletelist.text=Voulez-vous vraiment supprimer ''{0}''?
+message.confirm.deletelist.text=Voulez-vous vraiment supprimer ''{0}'' ?
 message.deletelist.success=La liste a \u00e9t\u00e9 supprim\u00e9e avec succ\u00e8s.
 message.deletelist.failure=\u00c9chec de la suppression de la liste.
 message.loading.lists=Chargement de la liste de valeurs...
@@ -22,12 +22,14 @@ message.empty.access=Cliquez sur 'Ajouter' pour fournir un acc\u00e8s \u00e0 la 
 message.error=Impossible de charger les donn\u00e9es.
 message.addvalue.failure=Impossible d''ajouter la valeur ''{0}''
 message.addlist.failure.title=Echec de l''ajout de la liste
-message.addlist.failure.text=Impossible d'ajouter la liste : {0}
+message.addlist.failure.text=Impossible d''ajouter la liste\u00a0: {0}
+message.renamelist.failure.title=\u00c9chec lors du renommage de la liste
+message.renamelist.failure.text=Impossible de renommer la liste\u00a0: {0}
 message.confirm.removevalue.title=Supprimer la valeur
-message.confirm.removevalue.text=Voulez-vous vraiment supprimer ''{0}''?
+message.confirm.removevalue.text=Voulez-vous vraiment supprimer ''{0}'' ?
 message.deletevalue.failure=\u00c9chec de la suppression de la valeur.
 message.confirm.removeaccess.title=Supprimer le droit d'acc\u00e8s
-message.confirm.removeaccess.text=Voulez-vous vraiment supprimer ''{0}''?
+message.confirm.removeaccess.text=Voulez-vous vraiment supprimer ''{0}'' ?
 message.removeaccess.failure=\u00c9chec de la suppression du droit d'acc\u00e8s.
 message.addaccess.failure=Impossible d'ajouter la valeur.
 
