--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_it.properties
@@ -1,4 +1,4 @@
-label.view-listofvalues-title=Elenchi
+﻿label.view-listofvalues-title=Elenchi
 label.edit-listofvalue-title=Modifica elenco: {0}
 label.values=Valori
 label.access=Accesso
@@ -22,7 +22,9 @@ message.empty.access=Fare clic su 'Aggiungi' per fornire l'accesso al valore per
 message.error=Impossibile caricare i dati.
 message.addvalue.failure=Impossibile aggiungere il valore ''{0}''
 message.addlist.failure.title=Aggiunta elenco non riuscita
-message.addlist.failure.text=Impossibile aggiungere l'elenco: {0}
+message.addlist.failure.text=Impossibile aggiungere elenco: {0}
+message.renamelist.failure.title=Ridenominazione elenco non riuscita
+message.renamelist.failure.text=Impossibile rinominare elenco: {0}
 message.confirm.removevalue.title=Rimuovi valore
 message.confirm.removevalue.text=Rimuovere ''{0}''?
 message.deletevalue.failure=Eliminazione valore non riuscita.
