--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/document-details/document-references.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/document-details/document-references.get_es.properties
@@ -3,5 +3,5 @@ label.manage-references=Gestionar
 message.no-messages=No existen referencias
 label.birelationship={0} desde {1}
 label.parentrelationshp={0}
-label.references-from-this=A otros registros
-label.references-to-this=Desde otros registros
+label.references-from-this=A otros documentos de archivo
+label.references-to-this=Desde otros documentos de archivo
