--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_de.properties
@@ -1,8 +1,8 @@
 ## Buttons
 button.new-category=Neue Kategorie
 button.new-folder=Neuer Ordner
-button.upload=Ablegen
-button.import=Importieren
+button.upload=Datei
+button.import=Import
 button.export-all=Alle exportieren
 button.manage-permissions=Berechtigungen verwalten
 button.up=Nach oben
@@ -30,7 +30,7 @@ label.new-rma_nonElectronicDocument.title=Nicht elektronischer Datensatz
 label.new-rma_nonElectronicDocument.header=Details zum Datensatz
 
 ## Drop-down Menus
-menu.selected-items=Ausgew\u00e4hlte Elemente...
+menu.selected-items=Ausgew\u00e4hlte Eintr\u00e4ge...
 menu.selected-items.deselect-all=Auswahl aufheben
 
 menu.selected-items.accession=Archivaufnahme
@@ -39,7 +39,7 @@ menu.selected-items.copy-to=Kopieren nach...
 menu.selected-items.cutoff=Trennen
 menu.selected-items.delete=L\u00f6schen
 menu.selected-items.destroy=Vernichten
-menu.selected-items.export=Exportieren
+menu.selected-items.export=Export
 menu.selected-items.link-to=Link zu...
 menu.selected-items.file-to=Ablegen unter...
 menu.selected-items.freeze=Fixieren
@@ -54,9 +54,9 @@ menu.selected-items.unfreeze=Fixierung aufheben
 message.file.type=Legen Sie einen elektronischen oder nicht elektronischen Datensatz ab?
 message.file.type.title=Ablagetyp
 message.multiple-delete.failure=Elemente konnten nicht gel\u00f6scht werden.
-message.multiple-delete.success={0} Element(e) erfolgreich gel\u00f6scht
+message.multiple-delete.success={0} Datei(en) erfolgreich gel\u00f6scht
 title.multiple-delete.confirm=Mehrfaches L\u00f6schen best\u00e4tigen
-message.multiple-delete.confirm=M\u00f6chten Sie die folgenden {0} Elemente wirklich l\u00f6schen?
+message.multiple-delete.confirm=Sind Sie sicher, dass Sie die folgende {0} Dateien l\u00f6schen m\u00f6chten?
 message.multiple-delete.please-wait=Bitte warten. Dateien werden gel\u00f6scht...
 message.new-folder.failure=Ordner konnte nicht erstellt werden.
 message.new-category.failure=Kategorie konnte nicht erstellt werden.
@@ -84,3 +84,9 @@ description.unfiledRecords.more.filterDisplay=Derzeit angezeigt: ''{0}''
 ## Browser dialogs
 label.filter-description.acp=Alfresco Content Package Datei (.acp)
 label.filter-description.zip=Archivpaket (.zip)
+
+## Pop-up Messages
+# General
+message.loading=Ablageplan wird geladen...
+message.error=Auf Ablageplan konnte nicht zugegriffen werden.
+message.empty=Keine Dateien
