--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_fr.properties
@@ -1,4 +1,4 @@
-## Buttons
+﻿## Buttons
 button.new-category=Nouvelle cat\u00e9gorie
 button.new-folder=Nouveau dossier
 button.upload=Fichier
@@ -7,8 +7,8 @@ button.export-all=Exporter tout
 button.manage-permissions=G\u00e9rer les autorisations
 button.up=Haut
 button.customize=Personnaliser
-button.navbar.show=Afficher la barre de navigation
-button.navbar.hide=Masquer la barre de navigation
+button.navbar.show=Afficher le fil d'Ariane
+button.navbar.hide=Cacher le fil d'Ariane
 button.fullwindow.enter=Pleine fen\u00eatre
 button.fullscreen.enter=Plein \u00e9cran
 button.fullscreen.exit=Quitter le plein \u00e9cran
@@ -19,7 +19,7 @@ button.electronic=\u00c9lectronique
 button.non-electronic=Non \u00e9lectronique
 button.report=Rapport
 button.manage-rules=G\u00e9rer les r\u00e8gles
-button.options=Options
+button.options=Options...
 
 ## Dialog labels
 label.new-rma_recordCategory.title=Nouvelle cat\u00e9gorie d'enregistrement
@@ -43,7 +43,7 @@ menu.selected-items.export=Exporter
 menu.selected-items.link-to=Lier \u00e0...
 menu.selected-items.file-to=Archiver dans...
 menu.selected-items.freeze=Geler
-menu.selected-items.move-to=Transf\u00e9rer vers...
+menu.selected-items.move-to=D\u00e9placer vers...
 menu.selected-items.reviewed=V\u00e9rifi\u00e9
 menu.selected-items.transfer=Transf\u00e9rer
 menu.selected-items.transfer-complete=Confirmation de transfert
@@ -54,10 +54,10 @@ menu.selected-items.unfreeze=D\u00e9geler
 message.file.type=Archivez-vous un enregistrement \u00e9lectronique ou non \u00e9lectronique ?
 message.file.type.title=Type d'archivage
 message.multiple-delete.failure=Impossible de supprimer les \u00e9l\u00e9ments
-message.multiple-delete.success={0} \u00e9l\u00e9ment(s) supprim\u00e9(s) avec succ\u00e8s
-title.multiple-delete.confirm=Confirmer la suppression multiple
-message.multiple-delete.confirm=Voulez-vous vraiment supprimer les {0} \u00e9l\u00e9ments suivants ?
-message.multiple-delete.please-wait=Veuillez patienter Fichiers en cours de suppression...
+message.multiple-delete.success=Suppression de {0} \u00e9l\u00e9ment(s) r\u00e9ussie
+title.multiple-delete.confirm=Confirmer l'action de suppression multiple
+message.multiple-delete.confirm=Etes-vous s\u00fbr de vouloir supprimer les {0} \u00e9l\u00e9ments suivants ?
+message.multiple-delete.please-wait=Veuillez patienter. Fichiers en cours de suppression...
 message.new-folder.failure=Impossible de cr\u00e9er le dossier
 message.new-category.failure=Impossible de cr\u00e9er la cat\u00e9gorie
 message.new-folder.success=Le dossier ''{0}'' a \u00e9t\u00e9 cr\u00e9\u00e9
@@ -84,3 +84,9 @@ description.unfiledRecords.more.filterDisplay=visualisation de ''{0}'' actuellem
 ## Browser dialogs
 label.filter-description.acp=Fichier .acp (Alfresco Content Package)
 label.filter-description.zip=Package d'archivage (.zip)
+
+## Pop-up Messages
+# General
+message.loading=Chargement du plan de fichier...
+message.error=Impossible d'acc\u00e9der au plan de fichier
+message.empty=Aucun \u00e9l\u00e9ment
