--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_it.properties
@@ -1,4 +1,4 @@
-## Buttons
+﻿## Buttons
 button.new-category=Nuova categoria
 button.new-folder=Nuova cartella
 button.upload=File
@@ -7,8 +7,8 @@ button.export-all=Esporta tutto
 button.manage-permissions=Gestisci permessi
 button.up=Su
 button.customize=Personalizza
-button.navbar.show=Mostra struttura di spostamento
-button.navbar.hide=Nascondi struttura di spostamento
+button.navbar.show=Mostra breadcrumb
+button.navbar.hide=Nascondi breadcrumb
 button.fullwindow.enter=Finestra intera
 button.fullscreen.enter=Schermo intero
 button.fullscreen.exit=Chiudi schermo intero
@@ -70,17 +70,23 @@ message.nothing-to-export=Niente da esportare
 description.path=
 description.path.more=
 description.savedsearch=Risultati della ricerca salvata
-description.savedsearch.more="{0}"
+description.savedsearch.more=''{0}''
 description.transfers=Trasferimenti
 description.transfers.more=(Record in attesa del completamento del trasferimento o dell'inserimento)
-description.transfers.more.filterDisplay=visualizzazione di "{0}"
+description.transfers.more.filterDisplay=visualizzazione di ''{0}''
 description.holds=Esenzioni attive
 description.holds.more=(Record e cartelle di record bloccati)
-description.holds.more.filterDisplay=visualizzazione di "{0}"
+description.holds.more.filterDisplay=visualizzazione di ''{0}''
 description.unfiledRecords=Record non archiviati
 description.unfiledRecords.more=(Record non archiviati)
-description.unfiledRecords.more.filterDisplay=visualizzazione di "{0}"
+description.unfiledRecords.more.filterDisplay=visualizzazione di ''{0}''
 
 ## Browser dialogs
 label.filter-description.acp=File Alfresco Content Package (.acp)
 label.filter-description.zip=Archivia pacchetto (.zip)
+
+## Pop-up Messages
+# General
+message.loading=Caricamento del piano file...
+message.error=Impossibile accedere al piano file
+message.empty=Nessun elemento
