--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/fileplan.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/fileplan.get_es.properties
@@ -4,4 +4,4 @@ header.fileplan=Plan de ficheros
 ## Filters
 label.transfers=Transferencias
 label.holds=Bloqueos
-label.unfiledRecords=Registros no archivados
+label.unfiledRecords=Documentos de archivo no archivados
