--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get_de.properties
@@ -1,2 +1,20 @@
 ## Title
 header.savedsearch=Gespeicherte Suchen
+
+rm.savedsearch.vitalRecordsName=Erforderliche Datens\u00e4tze mit f\u00e4lliger \u00dcberpr\u00fcfung
+rm.savedsearch.vitalRecordsDesc=Alle aktuell zum \u00dcberpr\u00fcfen f\u00e4lligen Datens\u00e4tze.
+
+rm.savedsearch.incompleteRecordsName=Nicht abgeschlossene Datens\u00e4tze
+rm.savedsearch.incompleteRecordsDesc=Alle nicht abgeschlossenen Datens\u00e4tze.
+
+rm.savedsearch.cutoffRecordsName=F\u00fcr Trennen geeignete Datens\u00e4tze
+rm.savedsearch.cutoffRecordsDesc=Alle aktuell zum Trennen geeigneten Datens\u00e4tze.
+
+rm.savedsearch.transferRecordsName=F\u00fcr \u00dcbertragung geeignete Datens\u00e4tze
+rm.savedsearch.transferRecordsDesc=Alle aktuell zur \u00dcbertragung geeigneten Datens\u00e4tze.
+
+rm.savedsearch.destructionRecordsName=F\u00fcr Vernichtung geeignete Datens\u00e4tze 
+rm.savedsearch.destructionRecordsDesc=Alle aktuell zur Vernichtung geeigneten Datens\u00e4tze.
+
+rm.savedsearch.frozenRecordsName=Fixierte Datens\u00e4tze
+rm.savedsearch.frozenRecordsDesc=Alle fixierten Datens\u00e4tze.
