--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_es.properties
@@ -1,10 +1,10 @@
 label.user=Usuario
 label.dateAndTime=Fecha y hora
 label.parentPath=Ruta
-label.recordSeriesIdentifier=Identificador de serie de registro
-label.recordCategoryIdentifier=Identificador de categor\u00eda de registros
-label.recordFolderIdentifier=Identificador de carpeta de registros
-label.vitalRecordIndicator=Indicador de registro vital
+label.recordSeriesIdentifier=Identificador de serie de documento de archivo
+label.recordCategoryIdentifier=Identificador de categor\u00eda de documentos de archivo
+label.recordFolderIdentifier=Identificador de carpeta de archivos
+label.vitalRecordIndicator=Indicador de documento de archivo vital
 label.dispositionAuthority=Autoridad de disposici\u00f3n
 label.noDispositionAuthority=Ninguno
 label.dispositionSchedule=Planificaci\u00f3n de disposici\u00f3n
