--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/manage-references.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/manage-references.get_es.properties
@@ -6,5 +6,5 @@ label.new-reference=Nueva referencia
 label.no-references=Sin referencias
 message.delete.fail=No se pudo eliminar la referencia
 message.delete.success=Referencia eliminada
-label.references-from=Referencias de otros registros
-label.references-to=Referencias a otros registros
+label.references-from=Referencias de otros documentos de archivo
+label.references-to=Referencias a otros documentos de archivo
