--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_es.properties
@@ -1,6 +1,6 @@
 label.title-new-reference = Nueva referencia
 label.select = Seleccionar
-label.record-link = Enlace a registro
+label.record-link = Enlace a documento de archivo
 label.record-rel = Relaci\u00f3n
 label.name = Nombre de la referencia
 label.required = Campo requerido
