--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_fr.properties
@@ -1,5 +1,40 @@
-header.action=Ex\u00e9cuter l'action :
+﻿header.action=Ex\u00e9cuter une action :
 button.freeze=Geler...
 button.reject=Rejeter...
 button.requestInfo=Demander des informations...
+button.select-folder=S\u00e9lectionner...
+button.message=Message...
+button.addRecordTypes=Types d'enregistrement...
 menu.item.select=S\u00e9lectionner...
+
+label.setProperty.property=D\u00e9finir la propri\u00e9t\u00e9\u00a0:
+label.setProperty.value=\u00e0
+
+dialog.destination.title=S\u00e9lectionner le dossier de destination
+
+## Format used for date entry in date picker, 'entry' format is used by date parsing code,
+## 'display' format is shown to the user under date entry field
+form.control.date-picker.entry.date.format=d/M/yyyy
+form.control.date-picker.display.date.format=DD/MM/YYYY
+
+## Format used for time entry in datetime picker, 'entry' format is used by date parsing code,
+## 'display' format is shown to the user under time entry field
+form.control.date-picker.entry.time.format=HH:mm
+form.control.date-picker.display.time.format=HH:MM (24 Hour)
+
+record.folder.path.title=Cliquez pour afficher le texte d'aide pour le champ du chemin du dossier d'enregistrement.
+record.folder.path.help=<p>Les substitutions suivantes sont autoris\u00e9es\u00a0:</p>\
+   <p></p>\
+   <p>date.day.short = Sun</p>\
+   <p>date.day = Sun</p>\
+   <p>date.day.long = Sunday</p>\
+   <p>date.day.number = 7 (1-7)</p>\
+   <p>date.day.year = 216 (001-365)</p>\
+   <p>date.month.short = Aug</p>\
+   <p>date.month = Aug</p>\
+   <p>date.month.long = August</p>\
+   <p>date.month.number = 08 (01-12)</p>\
+   <p>date.year.short = 13</p>\
+   <p>date.year = 13</p>\
+   <p>date.year.long = 2013</p>\
+   <p>date.year.week = 31 (01-52)</p>\
