--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_de.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_de.properties
@@ -1,4 +1,4 @@
-message.loading=Ladevorgang wird durchgef\u00fchrt...
+message.loading=Laden...
 message.empty=Keine Ergebnisse gefunden.
 message.error=Fehler w\u00e4hrend der Suche
 message.foundresults={0} Element(e) gefunden.
@@ -12,15 +12,21 @@ message.deletesearch.description=M\u00f6chten Sie die Suche ''{0}'' wirklich l\u
 message.deletesearch.success=Suche wurde erfolgreich gel\u00f6scht.
 message.deletesearch.failure=Suche konnte nicht gel\u00f6scht werden.
 
-label.searchtitle=Suchen
+label.searchtitle=Suche
 label.searchterm=Text abfragen
-label.records=Datens\u00e4tze
-label.undeclared=Nicht abgeschlossen
 label.criteria=Kriterien
 label.results=Ergebnisse
 label.insertfield=Feld einf\u00fcgen
-label.select=Ausw\u00e4hlen...
+label.select=Ausw\u00e4hlen ...
 label.insertdate=Datum einf\u00fcgen
+
+label.records=Datens\u00e4tze anzeigen (nur abgeschlossene)
+label.undeclared=Auch nicht abgeschlossene
+label.vital=Nur erforderliche anzeigen
+label.recordFolders=Datensatzordner anzeigen
+label.recordCategories=Datensatzkategorien anzeigen
+label.frozen=Nur fixierte anzeigen (ausgeschlossen, wenn nicht ausgew\u00e4hlt)
+label.cutoff=Nur getrennte anzeigen
 
 button.newsearch=Neue Suche
 button.savesearch=Suche speichern...
@@ -28,7 +34,7 @@ button.savedsearches=Gespeicherte Suchen
 button.deletesearch=Suche l\u00f6schen
 button.print=Drucker-Layout
 button.screen=Bildschirm-Layout
-button.export=Exportieren
+button.export=Export
 
 # RM Results Common
 label.options=Ergebnisoptionen
@@ -36,18 +42,14 @@ label.metadata=Metadaten
 label.order=Reihenfolge
 label.sortFirst=Zuerst nach
 label.sortNext=dann nach
-label.sortNone=(Keine)
+label.sortNone=(Kein)
 label.sortAscending=Aufsteigend
 label.sortDescending=Absteigend
 label.dueForReview=F\u00e4llige \u00dcberpr\u00fcfung
 label.components=Komponenten
-label.vital=Erforderlich
-label.recordFolders=Datensatzordner
-label.recordCategories=Datensatzkategorien
 label.recordSeries=Datensatzserien
 label.parentFolder=Elternordner
-label.frozen=Fixiert
-label.cutoff=Getrennt
+
 
 # RMA search model metadata fields
 label.dispositionEvents=Dispositionsereignisse
