--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_es.properties
@@ -1,5 +1,5 @@
-message.loading=Cargando...
-message.empty=Ning\u00fan resultado encontrado
+﻿message.loading=Cargando...
+message.empty=Ning\u00fan resultado encontrado.
 message.error=Error durante la b\u00fasqueda
 message.foundresults=Se encontraron {0} elemento(s).
 message.errorloadsearches=Error al cargar b\u00fasquedas guardadas.
@@ -14,13 +14,19 @@ message.deletesearch.failure=No se pudo eliminar la b\u00fasqueda.
 
 label.searchtitle=Buscar
 label.searchterm=Texto de consulta
-label.records=Registros
-label.undeclared=Incompleto
 label.criteria=Criterios
 label.results=Resultados
 label.insertfield=Insertar campo
 label.select=Seleccionar...
 label.insertdate=Insertar fecha
+
+label.records=Mostrar documentos de archivo (solo completados)
+label.undeclared=Incluir incompletos
+label.vital=Mostrar solo vitales
+label.recordFolders=Mostrar carpetas de archivos
+label.recordCategories=Mostrar categor\u00edas de documentos de archivo
+label.frozen=Mostrar solo congelados (excluidos cuando no est\u00e1n seleccionados)
+label.cutoff=Mostrar solo interrumpidos
 
 button.newsearch=Nueva b\u00fasqueda
 button.savesearch=Guardar b\u00fasqueda\u2026
@@ -33,7 +39,7 @@ button.export=Exportar
 # RM Results Common
 label.options=Opciones de resultados
 label.metadata=Metadatos
-label.order=Ordenar
+label.order=Orden
 label.sortFirst=Empezar por
 label.sortNext=continuar por
 label.sortNone=(Ninguno)
@@ -41,20 +47,16 @@ label.sortAscending=Ascendente
 label.sortDescending=Descendente
 label.dueForReview=Pendiente de revisi\u00f3n
 label.components=Componentes
-label.vital=Vital
-label.recordFolders=Carpetas de registros
-label.recordCategories=Categor\u00edas de registros
-label.recordSeries=Serie de registros
+label.recordSeries=Serie de documentos de archivo
 label.parentFolder=Carpeta padre
-label.frozen=Congelado
-label.cutoff=Interrumpir
+
 
 # RMA search model metadata fields
 label.dispositionEvents=Eventos de disposici\u00f3n
 label.dispositionActionName=Nombre de acci\u00f3n de disposici\u00f3n
 label.dispositionActionAsOf=Fecha de inicio de acci\u00f3n de disposici\u00f3n
 label.dispositionEventsEligible=Eventos de disposici\u00f3n que re\u00fanen los requisitos
-label.vitalRecordReviewPeriod=Per\u00edodo de revisi\u00f3n de registro vital
+label.vitalRecordReviewPeriod=Per\u00edodo de revisi\u00f3n de documento de archivo vital
 label.hasDispositionSchedule=Tiene planificaci\u00f3n de disposici\u00f3n
 label.dispositionPeriod=Per\u00edodo de disposici\u00f3n
 label.dispositionInstructions=Instrucciones de disposici\u00f3n
