--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_fr.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_fr.properties
@@ -1,6 +1,6 @@
-message.loading=Chargement...
+﻿message.loading=Chargement...
 message.empty=Aucun r\u00e9sultat trouv\u00e9.
-message.error=Erreur lors de la recherche
+message.error=Erreur durant la recherche
 message.foundresults={0} \u00e9l\u00e9ment(s) trouv\u00e9(s).
 message.errorloadsearches=Erreur lors du chargement des recherches enregistr\u00e9es.
 message.errorexport=Erreur lors de l'exporation des r\u00e9sultats de la recherche.
@@ -14,13 +14,19 @@ message.deletesearch.failure=La recherche n'a pas pu \u00eatre supprim\u00e9e.
 
 label.searchtitle=Rechercher
 label.searchterm=Texte de requ\u00eate
-label.records=Enregistrements
-label.undeclared=Incomplet
 label.criteria=Crit\u00e8res
 label.results=R\u00e9sultats
 label.insertfield=Ins\u00e9rer un champ
 label.select=S\u00e9lectionner...
 label.insertdate=Ins\u00e9rer une date
+
+label.records=Afficher les enregistrements (termin\u00e9s seulement)
+label.undeclared=Inclure incomplet
+label.vital=Afficher les essentiels seulement
+label.recordFolders=Afficher les dossiers d'enregistrements
+label.recordCategories=Afficher les cat\u00e9gories d'enregistrements
+label.frozen=Afficher les gel\u00e9s uniquement (exclus lorsque non s\u00e9lectionn\u00e9s)
+label.cutoff=Afficher les limit\u00e9s uniquement
 
 button.newsearch=Nouvelle recherche
 button.savesearch=Enregistrer la recherche...
@@ -33,21 +39,17 @@ button.export=Exporter
 # RM Results Common
 label.options=Options de r\u00e9sultats
 label.metadata=M\u00e9tadonn\u00e9es
-label.order=Ordre
+label.order=Commande
 label.sortFirst=D'abord par
 label.sortNext=puis par
-label.sortNone=(N\u00e9ant)
+label.sortNone=(Aucun)
 label.sortAscending=Croissant
 label.sortDescending=D\u00e9croissant
 label.dueForReview=Arriv\u00e9e \u00e0 \u00e9ch\u00e9ance pour v\u00e9rification
 label.components=Composants
-label.vital=Essentiel
-label.recordFolders=Dossiers d'enregistrements
-label.recordCategories=Cat\u00e9gories d'enregistrement
 label.recordSeries=S\u00e9rie d'enregistrement
 label.parentFolder=Dossier parent
-label.frozen=Gel\u00e9
-label.cutoff=Limiter
+
 
 # RMA search model metadata fields
 label.dispositionEvents=\u00c9v\u00e9nements de disposition
