--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_it.properties
@@ -1,4 +1,4 @@
-message.loading=Caricamento in corso...
+﻿message.loading=Caricamento in corso...
 message.empty=Nessun risultato trovato.
 message.error=Errore durante la ricerca
 message.foundresults={0} elementi trovati.
@@ -14,13 +14,19 @@ message.deletesearch.failure=Impossibile eliminare la ricerca.
 
 label.searchtitle=Ricerca
 label.searchterm=Testo query
-label.records=Record
-label.undeclared=Incompleto
 label.criteria=Criteri
 label.results=Risultati
 label.insertfield=Inserisci campo
 label.select=Seleziona...
 label.insertdate=Inserisci data
+
+label.records=Visualizza record (solo completati)
+label.undeclared=Includi incompleti
+label.vital=Visualizza solo essenziali
+label.recordFolders=Visualizza cartelle record
+label.recordCategories=Visualizza categorie record
+label.frozen=Visualizza solo bloccati (eslcusi se non selezionato)
+label.cutoff=Visualizza solo tagliati
 
 button.newsearch=Nuova ricerca
 button.savesearch=Salva ricerca...
@@ -36,18 +42,14 @@ label.metadata=Metadati
 label.order=Ordina
 label.sortFirst=Prima per
 label.sortNext=poi per
-label.sortNone=(Nessuno)
+label.sortNone=(Nessuna)
 label.sortAscending=Crescente
 label.sortDescending=Decrescente
 label.dueForReview=Da revisionare
 label.components=Componenti
-label.vital=Essenziale
-label.recordFolders=Cartelle record
-label.recordCategories=Categorie record
 label.recordSeries=Serie record
 label.parentFolder=Cartella padre
-label.frozen=Bloccato
-label.cutoff=Taglio
+
 
 # RMA search model metadata fields
 label.dispositionEvents=Eventi di disposizione
