--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_es.properties
@@ -3,7 +3,7 @@ header.multiUpload=Subir fichero(s)
 header.singleUpdate=Actualizar fichero
 header.singleImport=Importar
 
-section.recordType=Elegir tipo de registro
+section.recordType=Elegir tipo de documento de archivo
 section.file=Seleccionar fichero(s)
 
 label.browse=Seleccione los ficheros que desea subir
@@ -19,7 +19,7 @@ label.uploadStatus=Estado: {0}/{1} subido(s) ({2} fallidos)
 message.cancelStatus=Subida(s) cancelada(s); {0} fichero(s) subido(s)
 message.zeroByteFileSelected=Ha seleccionado el fichero {0}. No tiene ning\u00fan contenido y no se puede subir.
 message.flashError.title=Error de comunicaci\u00f3n Flash
-message.flashError.message=El navegador no puede comunicarse con el cargador Flash. Puede continuar archivando registros en modo de fichero \u00fanico o actualizar la p\u00e1gina para reiniciar Flash.
+message.flashError.message=El navegador no puede comunicarse con el cargador Flash. Puede continuar archivando documentos de archivo en modo de fichero \u00fanico o actualizar la p\u00e1gina para reiniciar Flash.
 
 section.version=Informaci\u00f3n de la versi\u00f3n
 label.version=Esta versi\u00f3n tiene:
@@ -30,6 +30,6 @@ label.comments=Comentarios
 label.contentType=Tipo de contenido
 type.cm_content=Contenido
 
-label.recordType=Tipos de registros
+label.recordType=Tipos de documentos de archivo
 label.recordType.description=Nota: Todos los ficheros enumerados se marcar\u00e1n como el tipo indicado.
 recordType.default=Predeterminado
