--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_es.properties
@@ -2,7 +2,7 @@ header.singleUpload=Subir fichero
 header.singleUpdate=Actualizar fichero
 header.singleImport=Importar
 
-section.recordType=Elegir tipo de registro
+section.recordType=Elegir tipo de documento de archivo
 section.file=Seleccionar fichero
 
 label.singleUploadTip=Con la \u00faltima versi\u00f3n instalada de Flash Player, puede subir m\u00faltiples ficheros. \
@@ -25,5 +25,5 @@ message.failure=No se pudo subir el documento
 label.contentType=Tipo de contenido
 type.cm_content=Contenido
 
-label.recordType=Tipos de registros
+label.recordType=Tipos de documentos de archivo
 recordType.default=Predeterminado
