--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-transfer-report.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-transfer-report.get_es.properties
@@ -1,4 +1,4 @@
-header=Seleccionar la carpeta de registros de destino
+header=Seleccionar la carpeta de archivos de destino
 
 node.root=Plan de ficheros
 title.single=Informe de transferencia de ficheros {0} en...
