--- a/rm-share/config/alfresco/messages/rm_ja.properties
+++ b/rm-share/config/alfresco/messages/rm_ja.properties
@@ -1,4 +1,4 @@
-## Records Management Messages
+ï»¿## Records Management Messages
 
 ## Page titles
 page.rmDocumentLibrary.title=\u30d5\u30a1\u30a4\u30eb\u30d7\u30e9\u30f3
@@ -67,7 +67,7 @@ button.freeze.record=\u30ec\u30b3\u30fc\u30c9\u306e\u56fa\u5b9a
 button.reject.record=\u30ec\u30b3\u30fc\u30c9\u306e\u5374\u4e0b
 button.request-info=\u60c5\u5831\u306e\u30ea\u30af\u30a8\u30b9\u30c8
 
-## Pop-up Messages
+##\ufffdPop-up Messages
 message.confirm.delete.title=\u524a\u9664\u306e\u78ba\u8a8d
 message.confirm.delete=''{0}''\u3092\u524a\u9664\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
 message.confirm.destroy.title=\u7834\u68c4\u306e\u78ba\u8a8d
@@ -79,7 +79,7 @@ message.confirm2.destroyMultiple=\u30d5\u30a1\u30a4\u30eb\u306e\u30b3\u30f3\u30c
 message.confirm.hide.record.title=\u30ec\u30b3\u30fc\u30c9\u3092\u975e\u8868\u793a\u306b\u3059\u308b
 message.confirm.hide.record=\u30ec\u30b3\u30fc\u30c9\u3092\u975e\u8868\u793a\u306b\u3059\u308b\u3068\u3001\u4eca\u5f8c\u3053\u306e\u30ec\u30b3\u30fc\u30c9\u306f\u5171\u540c\u30b5\u30a4\u30c8\u5185\u3067\u78ba\u8a8d\u3067\u304d\u306a\u304f\u306a\u308a\u307e\u3059\u3002
 message.select=\u9078\u629e...
-message.pdf-record-fonts.title=PDF\u30ec\u30b3\u30fc\u30c9\uff1a \u7d44\u307f\u8fbc\u307f\u30d5\u30a9\u30f3\u30c8\u306e\u30c1\u30a7\u30c3\u30af
+message.pdf-record-fonts.title=PDF\u30ec\u30b3\u30fc\u30c9\uff1a\u7d44\u307f\u8fbc\u307f\u30d5\u30a9\u30f3\u30c8\u306e\u30c1\u30a7\u30c3\u30af
 message.pdf-record-fonts.accession=\u767b\u9332\u3055\u308c\u305f\u3070\u304b\u308a\u306ePDF\u30ec\u30b3\u30fc\u30c9\u306b\u3001\u9069\u5207\u306a\u7d44\u307f\u8fbc\u307f\u30d5\u30a9\u30f3\u30c8\u304c\u542b\u307e\u308c\u3066\u3044\u308b\u3053\u3068\u3092\u30c1\u30a7\u30c3\u30af\u3057\u307e\u3059\u3002
 message.pdf-record-fonts.transfer=\u8ee2\u9001\u3055\u308c\u305f\u3070\u304b\u308a\u306ePDF\u30ec\u30b3\u30fc\u30c9\u306b\u3001\u9069\u5207\u306a\u7d44\u307f\u8fbc\u307f\u30d5\u30a9\u30f3\u30c8\u304c\u542b\u307e\u308c\u3066\u3044\u308b\u3053\u3068\u3092\u30c1\u30a7\u30c3\u30af\u3057\u307e\u3059\u3002
 message.pdf-record-fonts.unknown=\u8ee2\u9001\u307e\u305f\u306f\u767b\u9332\u306bPDF\u30ec\u30b3\u30fc\u30c9\u304c\u542b\u307e\u308c\u3066\u3044\u305f\u5834\u5408\u3001\u9069\u5207\u306a\u7d44\u307f\u8fbc\u307f\u30d5\u30a9\u30f3\u30c8\u304c\u542b\u307e\u308c\u3066\u3044\u308b\u3053\u3068\u3092\u30c1\u30a7\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044\u3002
@@ -127,18 +127,19 @@ actions.undo-cutoff=\u30ab\u30c3\u30c8\u30aa\u30d5\u3092\u5143\u306b\u623b\u3059
 actions.unfreeze=\u56fa\u5b9a\u89e3\u9664
 actions.unfreeze-all=\u3059\u3079\u3066\u56fa\u5b9a\u89e3\u9664
 actions.create-disposition-schedule=\u5ec3\u68c4\u30b9\u30b1\u30b8\u30e5\u30fc\u30eb\u306e\u4f5c\u6210
-actions.upload-new-version=\u65b0\u3057\u3044\u30d0\u30fc\u30b8\u30e7\u30f3\u306e\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
+actions.upload-new-version=\u65b0\u898f\u30d0\u30fc\u30b8\u30e7\u30f3\u306e\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
 actions.view-details=\u8a73\u7d30\u306e\u8868\u793a
 actions.view-audit-log=\u76e3\u67fb\u30ed\u30b0\u306e\u8868\u793a
-actions.create-record=\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u5ba3\u8a00
+actions.create-record=\u30ec\u30b3\u30fc\u30c9\u3068\u3057\u3066\u5ba3\u8a00\u3059\u308b
 actions.hide-record=\u30ec\u30b3\u30fc\u30c9\u3092\u975e\u8868\u793a\u306b\u3059\u308b
 actions.reject=\u5374\u4e0b
 actions.request-info=\u60c5\u5831\u306e\u30ea\u30af\u30a8\u30b9\u30c8
 actions.file-destruction-report=\u5ec3\u68c4\u30ec\u30dd\u30fc\u30c8\u306e\u751f\u6210
+actions.end-retention=\u4fdd\u6301\u306e\u7d42\u4e86
 
 ## File Plan Action Outcomes
 message.multi-select={0}\u500b\u306e\u9078\u629e\u3055\u308c\u305f\u30a2\u30a4\u30c6\u30e0
-message.accession.failure=''{0}''\u3092\u767b\u9332\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f 
+message.accession.failure=''{0}''\u3092\u767b\u9332\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.accession.success=''{0}''\u306f\u6b63\u5e38\u306b\u767b\u9332\u3055\u308c\u307e\u3057\u305f
 message.accession-complete.failure=''{0}''\u306e\u767b\u9332\u3092\u5b8c\u4e86\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.accession-complete.success=''{0}''\u306e\u767b\u9332\u304c\u5b8c\u4e86\u3057\u307e\u3057\u305f
@@ -171,13 +172,13 @@ message.open-folder.failure=\u30ec\u30b3\u30fc\u30c9\u30d5\u30a9\u30eb\u30c0''{0
 message.open-folder.success=\u30ec\u30b3\u30fc\u30c9\u30d5\u30a9\u30eb\u30c0''{0}''\u306f\u958b\u304b\u308c\u307e\u3057\u305f
 message.relinquish.failure=\u4fdd\u7559\u3092\u89e3\u9664\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.relinquish.success=\u4fdd\u7559\u306f\u89e3\u9664\u3055\u308c\u307e\u3057\u305f
-message.review-all.failure=\u30d5\u30a9\u30eb\u30c0''{0}''\u3067\u30ec\u30b3\u30fc\u30c9\u3092\u30ec\u30d3\u30e5\u30fc\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f 
+message.review-all.failure=\u30d5\u30a9\u30eb\u30c0''{0}''\u3067\u30ec\u30b3\u30fc\u30c9\u3092\u30ec\u30d3\u30e5\u30fc\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.review-all.success=\u30d5\u30a9\u30eb\u30c0''{0}''\u3067\u30ec\u30b3\u30fc\u30c9\u306f\u30ec\u30d3\u30e5\u30fc\u3055\u308c\u3066\u3044\u307e\u3059
-message.reviewed.failure=''{0}''\u3092\u30ec\u30d3\u30e5\u30fc\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f 
+message.reviewed.failure=''{0}''\u3092\u30ec\u30d3\u30e5\u30fc\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.reviewed.success=''{0}''\u306f\u6b63\u5e38\u306b\u30ec\u30d3\u30e5\u30fc\u3055\u308c\u307e\u3057\u305f
 message.split-email.failure=\u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb\u3092''{0}''\u304b\u3089\u5206\u96e2\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
-message.split-email.success=\u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb\u306f''{0}''\u304b\u3089\u6b63\u5e38\u306b\u5206\u96e2\u3055\u308c\u307e\u3057\u305f 
-message.transfer.failure=''{0}''\u3092\u8ee2\u9001\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f 
+message.split-email.success=\u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb\u306f''{0}''\u304b\u3089\u6b63\u5e38\u306b\u5206\u96e2\u3055\u308c\u307e\u3057\u305f
+message.transfer.failure=''{0}''\u3092\u8ee2\u9001\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.transfer.success=''{0}''\u306f\u6b63\u5e38\u306b\u8ee2\u9001\u3055\u308c\u307e\u3057\u305f
 message.transfer-complete.failure=''{0}''\u306e\u8ee2\u9001\u3092\u5b8c\u4e86\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.transfer-complete.success=''{0}''\u306e\u8ee2\u9001\u306f\u5b8c\u4e86\u3057\u3066\u3044\u307e\u3059
@@ -201,6 +202,8 @@ message.reject.failure=''{0}''\u3092\u5374\u4e0b\u3059\u308b\u3053\u3068\u304c\u
 message.reject.success=''{0}''\u306f\u5374\u4e0b\u3055\u308c\u307e\u3057\u305f
 message.file-destruction-report.failure=\u5ec3\u68c4\u30ec\u30dd\u30fc\u30c8\u3092\u751f\u6210\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.file-destruction-report.success=\u5ec3\u68c4\u30ec\u30dd\u30fc\u30c8\u306f\u751f\u6210\u3055\u308c\u307e\u3057\u305f
+message.end-retention.failure=\u4fdd\u6301\u3092\u7d42\u4e86\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
+message.end-retention.success=\u4fdd\u6301\u306f\u7d42\u4e86\u3057\u307e\u3057\u305f
 
 
 ## File Plan Status Indicators
@@ -219,6 +222,10 @@ status.rm-vital-record=\u5fc5\u9808\u30ec\u30b3\u30fc\u30c9
 status.rm-rejected-record=\u5374\u4e0b\u6e08\u307f
 status.rm-info-requested=\u60c5\u5831\u30ea\u30af\u30a8\u30b9\u30c8\u6e08\u307f
 status.rm-disposition-schedule=\u30ec\u30b3\u30fc\u30c9\u30ab\u30c6\u30b4\u30ea\u306b\u5ec3\u68c4\u30b9\u30b1\u30b8\u30e5\u30fc\u30eb\u304c\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u307e\u3059
+status.rm-digital-photograph-record=\u30c7\u30b8\u30bf\u30eb\u5199\u771f\u30ec\u30b3\u30fc\u30c9
+status.rm-pdf-record=PDF\u30ec\u30b3\u30fc\u30c9
+status.rm-scanned-record=\u30b9\u30ad\u30e3\u30f3\u6e08\u307f\u30ec\u30b3\u30fc\u30c9
+status.rm-web-record=Web\u30ec\u30b3\u30fc\u30c9
 # Exif
 status.exif=EXIF\u30e1\u30bf\u30c7\u30fc\u30bf\u304c\u5229\u7528\u53ef\u80fd\u3067\u3059
 
@@ -315,7 +322,9 @@ menu.select.invert=\u9078\u629e\u306e\u53cd\u8ee2
 menu.select.folders=\u30d5\u30a9\u30eb\u30c0
 menu.select.documents=\u6587\u66f8
 menu.select.records=\u30ec\u30b3\u30fc\u30c9
-menu.select.undeclared-records=\u672a\u5b8c\u4e86\u30ec\u30b3\u30fc\u30c9
+menu.select.undeclaredRecords=\u672a\u5b8c\u4e86\u30ec\u30b3\u30fc\u30c9
+menu.select.recordFolders=\u30ec\u30b3\u30fc\u30c9\u30d5\u30a9\u30eb\u30c0
+menu.select.recordCategories=\u30ec\u30b3\u30fc\u30c9\u30ab\u30c6\u30b4\u30ea
 
 ## Metadata Fields
 # Generic
@@ -348,15 +357,9 @@ details.transfer-container.title={0}\u306e\u8ee2\u9001
 details.transfer-container.is-accession=<em>\u30e1\u30e2\uff1a</em>\u8ee2\u9001\u30bf\u30a4\u30d7\u306f\u767b\u9332\u3067\u3059
 # Hold Container
 details.hold-container.title=\u4fdd\u7559\u304c{0}\u306b\u4f5c\u6210\u3055\u308c\u307e\u3057\u305f
-details.hold-container.title.date-format=yyyy\u5e74mmmm\u6708dd\u65e5 '\u6642\u523b' HH:MM:ss
+details.hold-container.title.date-format=dd mmmm yyyy '\u6642\u523b' HH:MM:ss
 details.hold-container.reason=\u4fdd\u7559\u3059\u308b\u7406\u7531
 details.hold-container.reason.none=\u8a72\u5f53\u306a\u3057
-
-## Pop-up Messages
-# General
-message.loading=\u30d5\u30a1\u30a4\u30eb\u30d7\u30e9\u30f3\u3092\u8aad\u307f\u8fbc\u3093\u3067\u3044\u307e\u3059...
-message.error=\u30d5\u30a1\u30a4\u30eb\u30d7\u30e9\u30f3\u306b\u30a2\u30af\u30bb\u30b9\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
-message.empty=\u30a2\u30a4\u30c6\u30e0\u306a\u3057
 
 ## File Upload (upload new version)
 label.filter-description={0}\u3068\u540c\u3058\u30bf\u30a4\u30d7
@@ -369,7 +372,7 @@ tip.insitu-rename=\u540d\u524d\u306e\u5909\u66f4
 tip.insitu-tag=\u30bf\u30b0
 
 ## Help panels, including Drag and Drop
-show.folders={0}\u500b\u306e\u30b5\u30d6\u30d5\u30a9\u30eb\u30c0\u3092\u8868\u793a\u3059\u308b=======
+show.folders={0}\u500b\u306e\u30b5\u30d6\u30d5\u30a9\u30eb\u30c0\u3092\u8868\u793a\u3059\u308b
 
 details.undeclared-record.info=\u672a\u5b8c\u4e86\u30ec\u30b3\u30fc\u30c9
 details.record.identifier=\u4e00\u610f\u306a\u30ec\u30b3\u30fc\u30c9ID
@@ -387,6 +390,7 @@ link.managementConsole=\u7ba1\u7406\u30b3\u30f3\u30bd\u30fc\u30eb
 ## Rules
 customise.reject.text=\u30b3\u30e1\u30f3\u30c8\u3092\u4ed8\u3051\u3066\u30ec\u30b3\u30fc\u30c9\u3092\u5374\u4e0b\u3057\u307e\u3059''{param.reason}''
 customise.requestInfo.text=\u6307\u5b9a\u3057\u305f\u4eba\u306e\u30ea\u30b9\u30c8\u306b\u5bfe\u3059\u308b\u30ef\u30fc\u30af\u30d5\u30ed\u30fc\u4f5c\u696d\u3092\u4f5c\u6210\u3057\u3001\u6b21\u306e\u60c5\u5831\u3092\u30ea\u30af\u30a8\u30b9\u30c8\u3057\u307e\u3059''{param.requestedInfo}''
+customise.sendEmail.text=\u6307\u5b9a\u3057\u305f\u53d7\u4fe1\u8005\u306b\u4ef6\u540d''{param.subject}''\u306eE\u30e1\u30fc\u30eb\u3092\u9001\u4fe1\u3059\u308b
 
 ## Records Management Console
 header.rm-console.label=\u30ec\u30b3\u30fc\u30c9\u7ba1\u7406...
@@ -402,3 +406,9 @@ rm.wf.selected-users-and-groups=\u30e6\u30fc\u30b6\u30fc\u3068\u30b0\u30eb\u30fc
 rm.wf.give-details=\u60c5\u5831\u306e\u6307\u5b9a
 rm.wf.message=\u30e1\u30c3\u30bb\u30fc\u30b8
 rm.wf.details=\u8a73\u7d30
+
+## Text length validation
+message.max.text.length.validation=\u30c6\u30ad\u30b9\u30c8\u306f{max}\u6587\u5b57\u4ee5\u4e0a\u306e\u9577\u3055\u306b\u3059\u308b\u3053\u3068\u306f\u3067\u304d\u307e\u305b\u3093
+
+## Validation messages
+Alfresco.forms.validation.rmVitalRecordPeriodMandatory.message=\u30ec\u30d3\u30e5\u30fc\u671f\u9593\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044
