--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_ja.properties
@@ -1,4 +1,4 @@
-label.header-title=\u76e3\u67fb
+﻿label.header-title=\u76e3\u67fb
 
 label.yes=\u306f\u3044
 label.no=\u3044\u3044\u3048
@@ -60,8 +60,8 @@ title.single=\u76e3\u67fb\u30ec\u30b3\u30fc\u30c9\u306e\u5834\u6240\u3092\u9078\
 
 label.header-users=\u30e6\u30fc\u30b6\u30fc
 label.header-entries=\u30a8\u30f3\u30c8\u30ea\u6570
-label.header-from=\u958b\u59cb\u65e5
-label.header-to=\u7d42\u4e86\u65e5
+label.header-from=\u9001\u4fe1\u8005
+label.header-to=\u5b9b\u5148
 label.header-event=\u30a4\u30d9\u30f3\u30c8
 label.header-property=\u30d7\u30ed\u30d1\u30c6\u30a3
 
@@ -69,3 +69,5 @@ label.dialog-title={0}\u30a4\u30d9\u30f3\u30c8\u306e\u8a73\u7d30
 label.property=\u30d7\u30ed\u30d1\u30c6\u30a3
 label.previous-value=\u4ee5\u524d\u306e\u5024
 label.new-value=\u65b0\u3057\u3044\u5024
+
+message.load-peopleFinder-failure=\u30e6\u30fc\u30b6\u30fc\u691c\u7d22\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u3092\u8aad\u307f\u8fbc\u3080\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
