--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_ja.properties
@@ -1,5 +1,5 @@
-label.view-listofvalues-title=\u30ea\u30b9\u30c8
-label.edit-listofvalue-title=\u30ea\u30b9\u30c8{0}\u306e\u7de8\u96c6 
+﻿label.view-listofvalues-title=\u30ea\u30b9\u30c8
+label.edit-listofvalue-title=\u30ea\u30b9\u30c8{0}\u306e\u7de8\u96c6
 label.values=\u5024
 label.access=\u30a2\u30af\u30bb\u30b9
 
@@ -22,7 +22,9 @@ message.empty.access=\uff3b\u8ffd\u52a0\uff3d\u3092\u30af\u30ea\u30c3\u30af\u305
 message.error=\u30c7\u30fc\u30bf\u3092\u8aad\u307f\u8fbc\u3080\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
 message.addvalue.failure=\u5024''{0}''\u3092\u8ffd\u52a0\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.addlist.failure.title=\u30ea\u30b9\u30c8\u3092\u8ffd\u52a0\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
-message.addlist.failure.text=\u30ea\u30b9\u30c8{0}\u3092\u8ffd\u52a0\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f 
+message.addlist.failure.text=\u30ea\u30b9\u30c8{0}\u3092\u8ffd\u52a0\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
+message.renamelist.failure.title=\u30ea\u30b9\u30c8\u306e\u540d\u524d\u3092\u5909\u66f4\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
+message.renamelist.failure.text=\u30ea\u30b9\u30c8{0}\u306e\u540d\u524d\u3092\u5909\u66f4\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.confirm.removevalue.title=\u5024\u306e\u524a\u9664
 message.confirm.removevalue.text=''{0}''\u3092\u524a\u9664\u3057\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b?
 message.deletevalue.failure=\u5024\u3092\u524a\u9664\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
