--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_es.properties
@@ -1,11 +1,11 @@
-## Buttons
+﻿## Buttons
 button.new-category=Nueva categor\u00eda
 button.new-folder=Nueva carpeta
 button.upload=Fichero
 button.import=Importar
 button.export-all=Exportar todo
 button.manage-permissions=Administrar permisos
-button.up=Subir
+button.up=Subir nivel
 button.customize=Personalizar
 button.navbar.show=Mostrar ruta de navegaci\u00f3n
 button.navbar.hide=Ocultar ruta de navegaci\u00f3n
@@ -14,7 +14,7 @@ button.fullscreen.enter=Pantalla completa
 button.fullscreen.exit=Salir de pantalla completa
 button.setDefaultView=Establecer ''{0}'' como predeterminado para esta carpeta
 button.removeDefaultView=Eliminar ''{0}'' como predeterminado para esta carpeta
-button.freeze.record=Congelar registros
+button.freeze.record=Congelar documentos de archivo
 button.electronic=Electr\u00f3nico
 button.non-electronic=No electr\u00f3nico
 button.report=Informe
@@ -22,12 +22,12 @@ button.manage-rules=Gestionar reglas
 button.options=Opciones
 
 ## Dialog labels
-label.new-rma_recordCategory.title=Nueva categor\u00eda de registros
-label.new-rma_recordCategory.header=Detalles de categor\u00edas de registros
-label.new-rma_recordFolder.title=Nueva carpeta de registros
-label.new-rma_recordFolder.header=Detalles de carpeta de registros
-label.new-rma_nonElectronicDocument.title=Registro no electr\u00f3nico
-label.new-rma_nonElectronicDocument.header=Detalles de registro
+label.new-rma_recordCategory.title=Nueva categor\u00eda de documentos de archivo
+label.new-rma_recordCategory.header=Detalles de categor\u00edas de documentos de archivo
+label.new-rma_recordFolder.title=Nueva carpeta de archivos
+label.new-rma_recordFolder.header=Detalles de carpeta de archivos
+label.new-rma_nonElectronicDocument.title=Documento de archivo no electr\u00f3nico
+label.new-rma_nonElectronicDocument.header=Detalles de documento de archivo
 
 ## Drop-down Menus
 menu.selected-items=Elementos seleccionados...
@@ -35,7 +35,7 @@ menu.selected-items.deselect-all=Deseleccionar todo
 
 menu.selected-items.accession=Adhesi\u00f3n
 menu.selected-items.accession-complete=Confirmaci\u00f3n de adhesi\u00f3n
-menu.selected-items.copy-to=Copiar en...
+menu.selected-items.copy-to=Copiar a...
 menu.selected-items.cutoff=Interrumpir
 menu.selected-items.delete=Eliminar
 menu.selected-items.destroy=Destruir
@@ -51,18 +51,18 @@ menu.selected-items.undo-cutoff=Deshacer interrupci\u00f3n
 menu.selected-items.unfreeze=Descongelar
 
 ## Pop-up Messages
-message.file.type=\u00bfEst\u00e1 archivando un registro electr\u00f3nico o no electr\u00f3nico?
+message.file.type=\u00bfEst\u00e1 archivando un documento de archivo electr\u00f3nico o no electr\u00f3nico?
 message.file.type.title=Tipo de archivado
 message.multiple-delete.failure=No se han podido eliminar elementos
-message.multiple-delete.success=Se han eliminado correctamente {0} elemento(s)
+message.multiple-delete.success=Se eliminaron con \u00e9xito {0} elemento(s)
 title.multiple-delete.confirm=Confirme la eliminaci\u00f3n m\u00faltiple
-message.multiple-delete.confirm=\u00bfEst\u00e1 seguro de que quiere eliminar los {0} elementos siguientes?
+message.multiple-delete.confirm=\u00bfEst\u00e1 seguro que quiere eliminar los {0} elementos siguientes?
 message.multiple-delete.please-wait=Espere. Se est\u00e1n borrando los ficheros...
 message.new-folder.failure=No se pudo crear la carpeta
 message.new-category.failure=No se pudo crear la categor\u00eda
 message.new-folder.success=Se ha creado la carpeta ''{0}''
 message.new-record.failure=No se pudo crear ''{0}''
-message.new-record.success=Se ha creado el registro ''{0}''
+message.new-record.success=Se ha creado el documento de archivo ''{0}''
 message.load-top-level-assets.failure=No se pudo exportar todo porque no se pudieron cargar los activos de nivel superior
 message.nothing-to-export=Nada que exportar
 
@@ -72,15 +72,21 @@ description.path.more=
 description.savedsearch=Resultados de b\u00fasqueda guardada
 description.savedsearch.more=''{0}''
 description.transfers=Transferencias
-description.transfers.more=(Registros a la espera de que concluya la transferencia o la adhesi\u00f3n)
+description.transfers.more=(Documentos de archivo a la espera de que concluya la transferencia o la adhesi\u00f3n)
 description.transfers.more.filterDisplay=actualmente viendo ''{0}''
 description.holds=Bloqueos activos
-description.holds.more=(Registros y carpetas de registros bloqueadas)
+description.holds.more=(Documentos de archivo y carpetas de archivos bloqueados)
 description.holds.more.filterDisplay=actualmente viendo ''{0}''
-description.unfiledRecords=Registros no archivados
-description.unfiledRecords.more=(registros que no est\u00e1n archivados)
+description.unfiledRecords=Documentos de archivo no archivados
+description.unfiledRecords.more=(documentos de archivo que no est\u00e1n archivados)
 description.unfiledRecords.more.filterDisplay=actualmente viendo ''{0}''
 
 ## Browser dialogs
 label.filter-description.acp=Fichero de paquete de contenido de Alfresco (.acp)
 label.filter-description.zip=Paquete de ficheros (.zip)
+
+## Pop-up Messages
+# General
+message.loading=Cargando el plan de ficheros...
+message.error=No se pudo acceder al plan de ficheros
+message.empty=No hay elementos
