--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_ja.properties
@@ -1,4 +1,4 @@
-## Buttons
+﻿## Buttons
 button.new-category=\u65b0\u898f\u30ab\u30c6\u30b4\u30ea
 button.new-folder=\u65b0\u898f\u30d5\u30a9\u30eb\u30c0
 button.upload=\u6574\u7406\u4fdd\u7ba1
@@ -7,7 +7,7 @@ button.export-all=\u3059\u3079\u3066\u30a8\u30af\u30b9\u30dd\u30fc\u30c8
 button.manage-permissions=\u6a29\u9650\u306e\u7ba1\u7406
 button.up=\u4e0a\u3078
 button.customize=\u30ab\u30b9\u30bf\u30de\u30a4\u30ba
-button.navbar.show=\u968e\u5c64\u30ea\u30f3\u30af\u306e\u8868\u793a
+button.navbar.show=\u968e\u5c64\u30ea\u30f3\u30af\u3092\u8868\u793a\u3059\u308b
 button.navbar.hide=\u968e\u5c64\u30ea\u30f3\u30af\u3092\u975e\u8868\u793a\u306b\u3059\u308b
 button.fullwindow.enter=\u5168\u30a6\u30a3\u30f3\u30c9\u30a6\u8868\u793a
 button.fullscreen.enter=\u5168\u753b\u9762\u8868\u793a
@@ -30,7 +30,7 @@ label.new-rma_nonElectronicDocument.title=\u975e\u96fb\u5b50\u30ec\u30b3\u30fc\u
 label.new-rma_nonElectronicDocument.header=\u30ec\u30b3\u30fc\u30c9\u306e\u8a73\u7d30
 
 ## Drop-down Menus
-menu.selected-items=\u9078\u629e\u3055\u308c\u305f\u30a2\u30a4\u30c6\u30e0...
+menu.selected-items=\u9078\u629e\u3057\u305f\u30a2\u30a4\u30c6\u30e0...
 menu.selected-items.deselect-all=\u3059\u3079\u3066\u9078\u629e\u89e3\u9664
 
 menu.selected-items.accession=\u767b\u9332
@@ -51,7 +51,7 @@ menu.selected-items.undo-cutoff=\u30ab\u30c3\u30c8\u30aa\u30d5\u3092\u5143\u306b
 menu.selected-items.unfreeze=\u56fa\u5b9a\u89e3\u9664
 
 ## Pop-up Messages
-message.file.type=\u96fb\u5b50\u307e\u305f\u306f\u975e\u30a8\u96fb\u5b50\u30ec\u30b3\u30fc\u30c9\u3092\u6574\u7406\u4fdd\u7ba1\u3057\u3066\u3044\u307e\u3059\u304b?
+message.file.type=\u96fb\u5b50\u307e\u305f\u306f\u975e\u96fb\u5b50\u30ec\u30b3\u30fc\u30c9\u3092\u6574\u7406\u4fdd\u7ba1\u3057\u3066\u3044\u307e\u3059\u304b?
 message.file.type.title=\u6574\u7406\u4fdd\u7ba1\u30bf\u30a4\u30d7
 message.multiple-delete.failure=\u30a2\u30a4\u30c6\u30e0\u3092\u524a\u9664\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.multiple-delete.success={0}\u4ef6\u306e\u30a2\u30a4\u30c6\u30e0\u306f\u6b63\u5e38\u306b\u524a\u9664\u3055\u308c\u307e\u3057\u305f
@@ -61,7 +61,7 @@ message.multiple-delete.please-wait=\u304a\u5f85\u3061\u304f\u3060\u3055\u3044\u
 message.new-folder.failure=\u30d5\u30a9\u30eb\u30c0\u3092\u4f5c\u6210\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.new-category.failure=\u30ab\u30c6\u30b4\u30ea\u3092\u4f5c\u6210\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.new-folder.success=\u30d5\u30a9\u30eb\u30c0''{0}''\u306f\u4f5c\u6210\u3055\u308c\u307e\u3057\u305f
-message.new-record.failure=''{0}''\u3092\u4f5c\u6210\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
+message.new-record.failure=''{0}'''\u3092\u4f5c\u6210\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
 message.new-record.success=\u30ec\u30b3\u30fc\u30c9''{0}''\u306f\u4f5c\u6210\u3055\u308c\u307e\u3057\u305f
 message.load-top-level-assets.failure=\u3059\u3079\u3066\u3092\u30a8\u30af\u30b9\u30dd\u30fc\u30c8\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u30c8\u30c3\u30d7\u30ec\u30d9\u30eb\u306e\u30a2\u30bb\u30c3\u30c8\u304c\u8aad\u307f\u8fbc\u3081\u306a\u3044\u305f\u3081\u3067\u3059
 message.nothing-to-export=\u30a8\u30af\u30b9\u30dd\u30fc\u30c8\u3059\u308b\u3082\u306e\u306f\u3042\u308a\u307e\u305b\u3093
@@ -84,3 +84,9 @@ description.unfiledRecords.more.filterDisplay=\u73fe\u5728''{0}''\u3092\u8868\u7
 ## Browser dialogs
 label.filter-description.acp=Alfresco\u30b3\u30f3\u30c6\u30f3\u30c4\u30d1\u30c3\u30b1\u30fc\u30b8\u30d5\u30a1\u30a4\u30eb\uff08.acp\uff09
 label.filter-description.zip=\u30a2\u30fc\u30ab\u30a4\u30d6\u30d1\u30c3\u30b1\u30fc\u30b8\uff08.zip\uff09
+
+## Pop-up Messages
+# General
+message.loading=\u30d5\u30a1\u30a4\u30eb\u30d7\u30e9\u30f3\u3092\u8aad\u307f\u8fbc\u3093\u3067\u3044\u307e\u3059...
+message.error=\u30d5\u30a1\u30a4\u30eb\u30d7\u30e9\u30f3\u306b\u30a2\u30af\u30bb\u30b9\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
+message.empty=\u30a2\u30a4\u30c6\u30e0\u306a\u3057
