--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_es.properties
@@ -6,7 +6,7 @@ title.actions=Pasos de disposici\u00f3n
 label.dispositionAuthority=Autoridad de disposici\u00f3n
 label.dispositionInstructions=Instrucciones de disposici\u00f3n
 label.appliedTo=Aplicado a
-label.appliedTo.record=Registro
+label.appliedTo.record=Documento de archivo
 label.appliedTo.folder=Carpeta
 label.noactions=La planificaci\u00f3n de disposici\u00f3n no tiene acciones
 label.title.simple={0}
