--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/events.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/events.get_es.properties
@@ -14,7 +14,7 @@ label.asOf=Fecha de inicio
 label.noDispositionSchedule=El ciclo de vida de la disposici\u00f3n no existe.
 label.noEventsInDispositionSchedule=No hay eventos para el paso ''{0}''.
 label.completeDispositionSchedule=Ciclo de vida de la disposici\u00f3n completado.
-label.dispositionScheduleAppliedToFolder=Planificaci\u00f3n de disposici\u00f3n aplicada a la carpeta de registro padre, con fecha de inicio: {0}.
+label.dispositionScheduleAppliedToFolder=Planificaci\u00f3n de disposici\u00f3n aplicada a la carpeta de archivo padre, con fecha de inicio: {0}.
 label.linkToFoldersDispositionSchedule=Ver eventos de la carpeta padre
 label.loadFailure=No se pudieron cargar los eventos
 button.completeEvent=Completar evento
