--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-condition.get_es.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-condition.get_es.properties
@@ -10,8 +10,8 @@ message.getTagFailure=No se pudo cargar la etiqueta
 
 ## Format used for date entry in date picker, 'entry' format is used by date parsing code,
 ## 'display' format is shown to the user under date entry field
-form.control.date-picker.entry.date.format=d/M/aaaa
-form.control.date-picker.display.date.format=DD/MM/AAAA
+form.control.date-picker.entry.date.format=d/M/yyyy
+form.control.date-picker.display.date.format=DD/MM/YYYY
 
 ## Format used for time entry in datetime picker, 'entry' format is used by date parsing code,
 ## 'display' format is shown to the user under time entry field
