--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_ja.properties
@@ -1,4 +1,4 @@
-message.loading=\u8aad\u307f\u8fbc\u3093\u3067\u3044\u307e\u3059...
+﻿message.loading=\u8aad\u307f\u8fbc\u3093\u3067\u3044\u307e\u3059...
 message.empty=\u691c\u7d22\u7d50\u679c\u306f\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f\u3002
 message.error=\u691c\u7d22\u4e2d\u306e\u30a8\u30e9\u30fc
 message.foundresults={0}\u4ef6\u306e\u30a2\u30a4\u30c6\u30e0\u3092\u691c\u51fa\u3057\u307e\u3057\u305f\u3002
@@ -14,17 +14,23 @@ message.deletesearch.failure=\u691c\u7d22\u3092\u524a\u9664\u3067\u304d\u307e\u3
 
 label.searchtitle=\u691c\u7d22
 label.searchterm=\u30af\u30a8\u30ea\u30c6\u30ad\u30b9\u30c8
-label.records=\u30ec\u30b3\u30fc\u30c9
-label.undeclared=\u672a\u5b8c\u4e86
 label.criteria=\u6761\u4ef6
 label.results=\u7d50\u679c
 label.insertfield=\u30d5\u30a3\u30fc\u30eb\u30c9\u306e\u633f\u5165
 label.select=\u9078\u629e...
 label.insertdate=\u65e5\u4ed8\u306e\u633f\u5165
 
+label.records=\u30ec\u30b3\u30fc\u30c9\u306e\u8868\u793a\uff08\u5b8c\u4e86\u6e08\u307f\u306e\u307f\uff09
+label.undeclared=\u672a\u5b8c\u4e86\u3092\u542b\u3080
+label.vital=\u5fc5\u9808\u306e\u307f\u306e\u8868\u793a
+label.recordFolders=\u30ec\u30b3\u30fc\u30c9\u30d5\u30a9\u30eb\u30c0\u306e\u8868\u793a
+label.recordCategories=\u30ec\u30b3\u30fc\u30c9\u30ab\u30c6\u30b4\u30ea\u306e\u8868\u793a
+label.frozen=\u56fa\u5b9a\u6e08\u307f\u306e\u307f\u306e\u8868\u793a\uff08\u672a\u9078\u629e\u6642\u306f\u9664\u5916\uff09
+label.cutoff=\u30ab\u30c3\u30c8\u30aa\u30d5\u306e\u307f\u306e\u8868\u793a
+
 button.newsearch=\u65b0\u898f\u691c\u7d22
 button.savesearch=\u691c\u7d22\u306e\u4fdd\u5b58...
-button.savedsearches=\u4fdd\u5b58\u3057\u305f\u691c\u7d22
+button.savedsearches=\u4fdd\u5b58\u3057\u305f\u691c\u7d22\u6761\u4ef6
 button.deletesearch=\u691c\u7d22\u306e\u524a\u9664
 button.print=\u30d7\u30ea\u30f3\u30bf\u30fc\u30ec\u30a4\u30a2\u30a6\u30c8
 button.screen=\u753b\u9762\u30ec\u30a4\u30a2\u30a6\u30c8
@@ -41,13 +47,9 @@ label.sortAscending=\u6607\u9806
 label.sortDescending=\u964d\u9806
 label.dueForReview=\u30ec\u30d3\u30e5\u30fc\u671f\u9650
 label.components=\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8
-label.vital=\u5fc5\u9808
-label.recordFolders=\u30ec\u30b3\u30fc\u30c9\u30d5\u30a9\u30eb\u30c0
-label.recordCategories=\u30ec\u30b3\u30fc\u30c9\u30ab\u30c6\u30b4\u30ea
 label.recordSeries=\u30ec\u30b3\u30fc\u30c9\u30b7\u30ea\u30fc\u30ba
 label.parentFolder=\u89aa\u30d5\u30a9\u30eb\u30c0
-label.frozen=\u56fa\u5b9a\u6e08\u307f
-label.cutoff=\u30ab\u30c3\u30c8\u30aa\u30d5
+
 
 # RMA search model metadata fields
 label.dispositionEvents=\u5ec3\u68c4\u30a4\u30d9\u30f3\u30c8
