--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/customizations/share/header/share-header.get_ja.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/customizations/share/header/share-header.get_ja.properties
@@ -1,1 +1,1 @@
-page.rmConsole.title=\u30ec\u30b3\u30fc\u30c9\u7ba1\u7406\u30b3\u30f3\u30bd\u30fc\u30eb
+#page.rmConsole.title=Records Management Console
